--- a/willpower.tex
+++ b/willpower.tex
@@ -2,6 +2,9 @@
 
 \usepackage{belaveshkin}
 
+\addto\captionsbelarusian{\renewcommand{\chaptername}{Разьдзел}} 
+\renewcommand*{\cftchaptername}{Разьдзел }
+
 \author{Андрусь Белавешкін}
 \title{Воля да жыцьця}
 \date{2020 Пераклад 2022}
@@ -23,7 +26,7 @@
 
 \pagestyle{headings}
 \setcounter{page}{3}
-\setcounter{tocdepth}{0}
+\setcounter{tocdepth}{1}
 \tableofcontents*
 \clearpage
 
