--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -1,8 +1,6 @@
-Разьдзел 1. 
-Гісторыя здароўя
+\chapter{Гісторыя здароўя}
 
-1. Здароўе не галоўнае?!
-
+\section{Здароўе не галоўнае?!}
 
 Віншую вас, чытальніку! Калі вы чытаеце гэтыя радкі, значыць, хутчэй за ўсё, цікавіцеся здароўем, думаеце пра сваю будучыню, хочаце стаць мацнейшым і дужэйшым, жыць даўжэй і якасьней. Сама цікавасьць да аптымальнага стану здароўя – гэта ўжо прыкмета здароўя, бо часта людзі, якія жывуць адным днём, проста не задумваюцца пра доўгатэрміновыя наступствы сваіх дзеяньняў. Але вы – тут, значыць, верыце ў сябе і гатовыя даць рады розным выклікам.
 
@@ -18,7 +16,7 @@
 
 Пазьбегнуць дыскамфорту, пакутаў і болю. Людзі зьвяртаюцца да курсу ўмацаваньня здароўя, каб вырашыць праблемы, якія ўжо існуюць. Хваробы спустошваюць нашыя рэсурсы, робяць нас больш адчувальнымі і слабымі. Умацаваньне ж здароўя ня толькі дапамагае нам прапампаваць арганізм, але і павышае ступень кантролю над сваім целам, што прыводзіць да памяншэньня болевае адчувальнасьці, паляпшэньня стану нават пры існых хваробах.
 
-Здаровы лад жыцьця вельмі эфэктыўны для прадухіленьня захворваньняў, нават анкалёгіі. Высьветлена, што імавернасьць захворваньня на рак у здаровага чалавека на 40% ніжэйшая, чым у чалавека са слабым здароўем. Нават калі адэпт ЗЛЖ хварэе, то рызыка сьмяротнага зыходу скарачаецца на 14-60%.
+Здаровы лад жыцьця вельмі эфэктыўны для прадухіленьня захворваньняў, нават анкалёгіі. Высьветлена, што імавернасьць захворваньня на рак у здаровага чалавека на 40\,\% ніжэйшая, чым у чалавека са слабым здароўем. Нават калі адэпт ЗЛЖ хварэе, то рызыка сьмяротнага зыходу скарачаецца на 14-60\,\%.
 
 Павысіць узровень энэргіі, разумовую і фізычную працаздольнасьць. Сёньня многія прыходзяць да мяне па здароўе, але называюць яго інакш – энэргіяй. Такі запыт узьнікае, калі чалавек пачуваецца добра, але сутыкаецца з падвышанай нагрузкай. Часта людзі адмаўляюцца ад пэрспэктыўнай працы ці пашырэньня бізнэсу з прычыны стомленасьці, выгараньня. Іх звыклы ўзровень здароўя недастатковы, і каб адаптавацца да новых патрэбаў і ня выгараць, трэба павялічваць «запас здароўя». Не ахвяруйце здароўем дзеля працы, умацоўвайце здароўе і працуйце з задавальненьнем! Упэўнены, што мацнейшае здароўе забясьпечыць вам і высокую працаздольнасьць без выгараньня.
 
@@ -46,7 +44,7 @@
 
 Дэпрэсія можа ўзьнікаць у сувязі з мноствам біялягічных чыньнікаў, у тым ліку атлусьценьне, хранічнае запаленьне, парушэньні працы шчытападобнай залозы, зьніжэньне ўзроўню тэстастэрону і да т.п., а ня толькі праз стрэс.
 
-Вялікае значэньне мае і генэтыка: узровень самаадчуваньня на 35-40% вызначаецца генамі. Напрыклад, носьбіты «доўгіх» варыяцый сератанінавага гену 5-HTTLPR шчасьлівейшыя за ўладальнікаў «кароткіх» варыяцый. А мо справа ў нізкім узроўні літыю ў пітной вадзе ці дэфіцыце фолевай кісьлі? Як бачыце, пытаньне шчасьця шмат у чым злучанае з нашай біялёгіяй.
+Вялікае значэньне мае і генэтыка: узровень самаадчуваньня на 35-40\,\% вызначаецца генамі. Напрыклад, носьбіты «доўгіх» варыяцый сератанінавага гену 5-HTTLPR шчасьлівейшыя за ўладальнікаў «кароткіх» варыяцый. А мо справа ў нізкім узроўні літыю ў пітной вадзе ці дэфіцыце фолевай кісьлі? Як бачыце, пытаньне шчасьця шмат у чым злучанае з нашай біялёгіяй.
 
 Калі вы часта і падоўгу пачуваецеся няшчасным – гэта можа быць сымптомам захворваньня. А для шчасьця патрэбнае як фізычнае, так і псыхічнае здароўе. Шчасьце – гэта досьвед і паўната жыцьця. Ня проста валоданьне грашыма, але й магчымасьць больш патраціць асабіста на сябе: на здароўе, на трэнэра, на псыхатэрапэўта. Шчасьце – гэта працэс, практыка, а ня вынік. І яму, як і любому іншаму навыку, можна навучыцца. Імкненьне да шчасьця – гэта неад'емнае права кожнага чалавека.
 
@@ -70,8 +68,7 @@
 3. Ці ведаеце вы некага, хто быў вымушаны скончыць праект, пакінуць працу з прычыны здароўя? Ці магчыма, што нагодай была не сама праца, а нізкі ўзровень здароўя?
 
 
-2. Парадокс здароўя
-
+\section{Парадокс здароўя}
 
 Самая вялікая пагроза здароўю – гэта страта веры ў сябе, у сваю здольнасьць нешта зьмяніць. Здароўе больш за напалову залежыць ад нашага жаданьня і нашых сьвядомых намаганьняў. Здароўе – гэта стыль мысьленьня, самаідэнтыфікацыя, імкненьне да самарэалізацыі, воля да жыцьця. Страціўшы гэтую волю, мы губляем ня проста здароўе, мы губляем сябе. Усё, што мы робім сёньня, – гэта або інвэстыцыя ў нашую будучыню, або крэдыт у сябе ў будучыні.
 
@@ -105,7 +102,7 @@
 
 Парадокс таблеткі. Я часта бачу, што людзі чакаюць ад мяне чароўнай таблеткі, але ня хочуць карыстацца праверанымі эфэктыўнымі сродкамі. «Гэта вельмі проста і нудна, – кажуць яны, – а дзе ж навука?» Прагрэс навукі спараджае ў шматлікіх людзей чаканьне, што нейкія прэпараты ці апараты змогуць чароўнай чынам іх аздаравіць. Аднак дасюль ня вынайдзеная і наўрад ці зьявіцца ў найбліжэйшай будучыні таблетка, якая зробіць вас стрэсаўстойлівымі і ўсьвядомленымі, худымі і мускулістымі. Таму імкніцеся ня піць таблеткі, каб быць здаровымі, а быць здаровымі, каб ня піць таблеткі.
 
-Абсалютная большасьць дадаткаў не дае прыкметнага эфэкту здаровым людзям. А вось здаровы лад жыцьця – працуе, робіць нас лепшымі і мацнейшымі. Менавіта сьвядомыя ўважлівыя дзеяньні стымулююць разьвіцьцё, а не пасіўнае спажываньне «аздараўленчых» прадуктаў. Многія людзі даюць нырца ў ЗЛЖ, але атрымліваюць толькі праблемы са здароўем. Рыба на абед больш эфэктыўная, чым Амега-3 у капсулах; прыём вітаміну D не заменіць часу, праведзенага на сонцы; міястымулятары не разьвіваюць цягліцы, а рэгулярныя практыкаваньні працуюць на 100%.
+Абсалютная большасьць дадаткаў не дае прыкметнага эфэкту здаровым людзям. А вось здаровы лад жыцьця – працуе, робіць нас лепшымі і мацнейшымі. Менавіта сьвядомыя ўважлівыя дзеяньні стымулююць разьвіцьцё, а не пасіўнае спажываньне «аздараўленчых» прадуктаў. Многія людзі даюць нырца ў ЗЛЖ, але атрымліваюць толькі праблемы са здароўем. Рыба на абед больш эфэктыўная, чым Амега-3 у капсулах; прыём вітаміну D не заменіць часу, праведзенага на сонцы; міястымулятары не разьвіваюць цягліцы, а рэгулярныя практыкаваньні працуюць на 100\,\%.
 
 На жаль, лекары і мэдычнае асяродзьдзе не пасьпяваюць за ўсплёскам масавага попыту на здаровы лад жыцьця і практычна не даюць пэўных навуковых адказаў на пытаньні менавіта прафіляктыкі, умацаваньня здароўя, больш факусуючыся на лячэньні ўжо існых захворваньняў. Гэта прывяло да зьяўленьня вялікай колькасьці інста-дактароў, аматараў і шарлятанаў.
 
@@ -139,7 +136,7 @@
 3. Якім вы сябе бачыце ў старасьці? Здаровым бадзёрым пэнсіянэрам, які вандруе па сьвеце зь невычэрпнай цікаўнасьцю, ці тым, хто мадзее старцам з мноствам хваробаў?
 
 
-3. Здароўе як вайна з сабой і сьветам
+\section{Здароўе як вайна з сабой і сьветам}
 
 
 Многія людзі прыходзяць да мяне на кансультацыю з такім настроем, быццам яны сабраліся на вайну са сваім арганізмам. І мне прыемна бачыць, што падчас нашай гутаркі ў іх прачынаецца цікавасьць, а напруга сыходзіць, – бітвы звычайна не пакідаюць такога посмаку. Я вельмі рады, калі чалавек адчувае цікавасьць да свайго арганізму і гатовы шукаць, як здаволіць свае патрэбы здаровымі спосабамі, а не ґвалтаваць сябе строгімі дыетамі і зьнясільвальнымі трэніроўкамі.
@@ -171,7 +168,7 @@
 3. Як вы ставіцеся да навакольнага асяродзьдзя? Гэта для вас цудоўнае месца, дзе багата карыснага для здароўя, ці вы бачыце толькі бруднае паветра, атручаныя акіяны і забруджаныя пэстыцыдамі землі? Зірніце на навакольны сьвет як на крыніцу здароўя без «ваенных» кагнітыўных фільтраў.
 
 
-4. Гісторыя здароўя
+\section{Гісторыя здароўя}
 
 Мы заўсёды імкнуліся зразумець, чаму ўзьнікаюць праблемы ў арганізьме і што трэба рабіць для таго, каб захаваць здароўе. Пазыцыя людзей таксама прайшла шлях ад «чалавека пасыўнага» перад абліччам пагрозаў да «чалавека актыўнага», які кіруе сваім здароўем.
 
@@ -212,7 +209,7 @@
 3. Ці згодныя вы з тым, што «невуцтва – корань усіх пакутаў»? Ці дастаткова вы ведаеце пра свой розум і сваё цела?
 
 
-5. Антычная канцэпцыя асабістага здароўя, альбо «Як сесьці на дыету»
+\section{Антычная канцэпцыя асабістага здароўя, альбо «Як сесьці на дыету»}
 
 
 У маёй кніжнай шафе ганаровае мейсца займаюць кнігі некалькіх антычных аўтараў. Іх ідэі актуальныя і сёньня, жарты па-ранейшаму сьмешныя, а праблемы прымушаюць задумацца. Эпоха антычнасьці стала ўзорам для ўсіх наступных часоў, сфармаваўшы ідэал чалавека – прыгожага душой і целам, грамадзяніна і ваяра, які нясе адказнасьць перад сабой і людзьмі. Здароўе для грэкаў было ня ўтомным «абавязкам», а неад'емнай часткай самаразьвіцьця і самаспазнаньня. Так, нароўні з росквітам мастацтва і зараджэньнем навукі і філязофіі, узьнікла новае разуменьне асабістага здароўя.
@@ -247,7 +244,7 @@
 3. Ці прымаеце вы свае недахопы? Адмаўляючы свае асаблівасьці, мы ігнаруем і магчымасьці для зьмены. Прыміце сябе, іншага «Я» ў вас няма. Як вашыя недахопы можна ператварыць у перавагі?
 
 
-6. Здароўе ці хвароба, норма ці здароўе?
+\section{Здароўе ці хвароба, норма ці здароўе?}
 
 
 Прагрэс анатоміі і фізыялёгіі пачаўся ў эпоху Адраджэньня, і з таго часу многія дасьледчыкі пачалі ўспрымаць цела як своеасаблівы мэханізм. Сэрца – помпа, сасуды – трубы, суставы і сухажыллі – блёкі і шасьцярэнькі. Здароўе мяркуе правільную працу гэтага мэханізму, іншымі словамі, здароўе – гэта адсутнасьць парушэньняў, хваробаў. Тады і лячэньне азначае «хутка выправіць паломку», каб чалавек мог працягнуць свой звыклы лад жыцьця.
@@ -264,11 +261,11 @@
 
 Рамантуйце дах, пакуль сьвеціць сонца! Гэта слушна і ў прамым, і ў пераносным сэнсе – займайцеся сваім мозгам да зьяўленьня дэмэнцыі! Нэўрадэгенэратыўныя захворваньні небясьпечныя тым, што маюць працяглы пэрыяд схаванага разьвіцьця (латэнтная стадыя). Тым часам нэўроны гінуць, але праяваў хваробы амаль няма, і чалавек пачуваецца звычайна, бо частку функцыяў на сябе бяруць ацалелыя нэўроны. Разьвіцьцё хваробы ідзе бессымптомна.
 
-У нашага мозгу высокі запас трываласьці, і большая частка нэўронаў можа незваротна разбурыцца да зьяўленьня першых сымптомаў. А чым больш клетак загінула, тым менш эфэктыўнымі будуць і лекавыя мерапрыемствы. Так, пры бакавым аміятрафічным склерозе сымптомы зьяўляюцца пасьля гібелі паловы рухальных нэўронаў, а пры хваробе Паркінсана – толькі калі загіне 70% дафамінавых нэўронаў.
+У нашага мозгу высокі запас трываласьці, і большая частка нэўронаў можа незваротна разбурыцца да зьяўленьня першых сымптомаў. А чым больш клетак загінула, тым менш эфэктыўнымі будуць і лекавыя мерапрыемствы. Так, пры бакавым аміятрафічным склерозе сымптомы зьяўляюцца пасьля гібелі паловы рухальных нэўронаў, а пры хваробе Паркінсана – толькі калі загіне 70\,\% дафамінавых нэўронаў.
 
-Вылучаюць 12 ключавых фактараў рызыкі дэмеэцыі: малаадукаванасьць, гіпэртанія, парушэньні слыху, курэньне, атлусьценьне, дэпрэсія, адсутнасьць фізычнай актыўнасьці, дыябэт, нізкі сацыяльны кантакт, празьмернае ўжываньне алькаголю, чэрапна-мазгавыя траўмы і забруджваньне паветра. Яны адказваюць за 40% усіх выпадкаў дэмэнцыі і зьяўляюцца кіраванымі. Устараненьне гэтых фактараў рызыкі прыкметна зьменшыць і рызыку нэўрадэгенэратыўных захворваньняў.
+Вылучаюць 12 ключавых фактараў рызыкі дэмеэцыі: малаадукаванасьць, гіпэртанія, парушэньні слыху, курэньне, атлусьценьне, дэпрэсія, адсутнасьць фізычнай актыўнасьці, дыябэт, нізкі сацыяльны кантакт, празьмернае ўжываньне алькаголю, чэрапна-мазгавыя траўмы і забруджваньне паветра. Яны адказваюць за 40\,\% усіх выпадкаў дэмэнцыі і зьяўляюцца кіраванымі. Устараненьне гэтых фактараў рызыкі прыкметна зьменшыць і рызыку нэўрадэгенэратыўных захворваньняў.
 
-Кантынуум здароўя – актуальны погляд на тэму таго, што здароўе і хвароба – не ўзаемавыключальныя працэсы. Нельга супрацьпастаўляць здароўе як аптымальны стан і захворваньне як абсалютную паталёгію. І хвароба, і здароўе могуць суіснаваць адначасова, мець шэраг пераходных станаў з шырокім размахам паказьнікаў. На адным канцы гэтага кантынууму сьмерць, на другім – супэрідэальнае здароўе, паміж імі мноства стадый: добрае самаадчуваньне, нармальнае самаадчуваньне, нядужаньне, невялікія сымптомы, захворваньне і зьніжэньне актыўнасьці, прыкметнае зьніжэньне магчымасьцяў праз хваробу. Высокі ўзровень здароўя можа кампэнсаваць асобныя праявы захворваньняў. Здароўе і яго патэнцыял мы маем заўсёды, пакуль дыхаем. Можна быць хворым на 10% ці на 40%, здаровым – на 5% або на 60%. Суадносіны і вызначаюць ваш стан.
+Кантынуум здароўя – актуальны погляд на тэму таго, што здароўе і хвароба – не ўзаемавыключальныя працэсы. Нельга супрацьпастаўляць здароўе як аптымальны стан і захворваньне як абсалютную паталёгію. І хвароба, і здароўе могуць суіснаваць адначасова, мець шэраг пераходных станаў з шырокім размахам паказьнікаў. На адным канцы гэтага кантынууму сьмерць, на другім – супэрідэальнае здароўе, паміж імі мноства стадый: добрае самаадчуваньне, нармальнае самаадчуваньне, нядужаньне, невялікія сымптомы, захворваньне і зьніжэньне актыўнасьці, прыкметнае зьніжэньне магчымасьцяў праз хваробу. Высокі ўзровень здароўя можа кампэнсаваць асобныя праявы захворваньняў. Здароўе і яго патэнцыял мы маем заўсёды, пакуль дыхаем. Можна быць хворым на 10\,\% ці на 40\,\%, здаровым – на 5\,\% або на 60\,\%. Суадносіны і вызначаюць ваш стан.
 
 
 Розьніца паміж «умацаваньнем здароўя» і «лячэньнем хваробаў». Гэтыя паняткі маюць шмат адрозьненьняў і шмат агульнага. Умацаваньне здароўя – гэта мерапрыемствы і дзеяньні, накіраваныя на павелічэньне вашых рэсурсаў. Зрэшты, часам гэта лечыць хваробы. Лячэньне хваробаў – гэта канкрэтныя падыходы, накіраваныя на карэкцыю парушэньняў, выкліканых захворваньнем. Напрыклад, антыбіётыкі пры бактэрыяльнай пнэўманіі, гіпс пры пераломе. Калі вы зламалі нагу, дык здаровае харчаваньне ці мэдытацыі не надта паскораць зрастаньне костак. А вось пры шэрагу захворваньняў выкарыстоўваюцца і прэпараты, і ўмацаваньне здароўя.
@@ -298,10 +295,10 @@
 
 2. Якія захворваньні ў вас ёсьць у гэты момант? Ці вылечныя яны? Як зьмяненьне ладу жыцьця (г.зн. умацаваньне здароўя) паўплывае на іх? Наколькі вялікі патэнцыял гэтага ўплыву?
 
-3. Ацаніце ў адстотках сваё здароўе (100% – суперідэальнае). Як бы вы пачуваліся і што б адчувалі, маючы ідэальнае, стоадсоткавае здароўе?
+3. Ацаніце ў адстотках сваё здароўе (100\% – суперідэальнае). Як бы вы пачуваліся і што б адчувалі, маючы ідэальнае, стоадсоткавае здароўе?
 
 
-7. Рэсурс здароўя
+\section{Рэсурс здароўя}
 
 
 Рэсурсны падыход – гэта ацэнка здароўя як сыстэмы ўзаемазьвязаных фізычных, псыхалягічных і сацыяльных рэсурсаў. Кожны зь іх можна вызначаць і зьмяняць. Любое паляпшэньне здароўя я пачынаю з вымярэньня здароўя – так, як мы вызначаем стан пацыента паводле аналізаў. На стадыі першаснай прафіляктыкі мы не павінны супакойвацца адсутнасьцю хваробаў – гэта важна.
@@ -378,9 +375,9 @@
 
 У разьдзеле «Усьвядомленасьць» мы разгледзім наступныя крытэры псыхічнага здароўя: здольнасьць пераносіць свае эмоцыі і думкі, стрымліваць эмацыйную рэакцыю, адзьдзяляць эмоцыі ад дзеяньняў, адчуваць пачуцьцё асобнасьці, мэнталізацыю як разуменьне іншых і іх межаў, рэфлексію і здольнасьць зірнуць на сябе збоку. Вялікае значэньне мае і балянс паміж асабістымі інтарэсамі ды інтарэсамі грамадства, а таксама пачуцьцё вітальнасьці, г.зн. «адчуваньне сябе жывым і дзейсным».
 
-Віды рэсурсаў здароўя. Формула здароўя вызначаецца наступнымі фактарамі: 50% – гэта лад жыцьця, зь іх 25% – гэта харчаваньне і здароўе кішачніка, па 20% у генэтыкі і асяродзьдзя, 10% – сыстэма аховы здароўя. У сваю чаргу, лад жыцьця чалавека складаецца з асобных кампанэнтаў, рэсурсаў здароўя. Далей у кнізе мы будзем іх падрабязна абмяркоўваць і вывучаць, як можна прапампаваць кожны з рэсурсаў. Мая мара – каб кожны чалавек мог навучыцца ўсьвядомленаму кіраваньню сваім здароўем.
+Віды рэсурсаў здароўя. Формула здароўя вызначаецца наступнымі фактарамі: 50\,\% – гэта лад жыцьця, зь іх 25\,\% – гэта харчаваньне і здароўе кішачніка, па 20\,\% у генэтыкі і асяродзьдзя, 10\,\% – сыстэма аховы здароўя. У сваю чаргу, лад жыцьця чалавека складаецца з асобных кампанэнтаў, рэсурсаў здароўя. Далей у кнізе мы будзем іх падрабязна абмяркоўваць і вывучаць, як можна прапампаваць кожны з рэсурсаў. Мая мара – каб кожны чалавек мог навучыцца ўсьвядомленаму кіраваньню сваім здароўем.
 
-((карцінка: 10% мэдыцына 20% генэтыка 20% экалёгія 50% лад жыцьця))
+((карцінка: 10\% мэдыцына 20\% генэтыка 20\% экалёгія 50\% лад жыцьця))
 
 Рэсурсы здароўя мусяць адпавядаць асноўным крытэрам: быць унівэрсальнымі для ўсіх людзей, мець надзейнае навуковае абгрунтаваньне свайго ўплыву на здароўе, быць даступнымі для самастойнай адзнакі і карэкцыі.
 
@@ -408,7 +405,7 @@
 3. Як моцна працоўная нагрузка вычэрпвае вашыя рэсурсы здароўя? Ці надоўга вас стае?
 
 
-8. Залішняе здароўе
+\section{Залішняе здароўе}
 
 
 Чаму многія старыя будынкі больш трывалыя за сучасныя? Калі архітэктар ня можа дакладна разьлічыць нагрузкі, ён імкнецца закласьці надмернасьць канструкцыі, робячы сьцены і перакрыцьці больш тоўстымі і надзейнымі. Такая надмернасьць і вядзе да даўгавечнасьці.
@@ -431,7 +428,7 @@
 
 Як мы ведаем, мозг плястычны, і атрыманыя, скажам, пры вывучэньні мовы новыя нэўронныя сувязі могуць зь лёгкасьцю выкарыстоўвацца для іншых задач. Пры захворваньні яны могуць узяць на сябе функцыі пашкоджаных структур, кампэнсуючы хваробу.
 
-Галоўнае – сэрцам не старэць!савецкая/расійская оптыка. Падумаю, чым адпаведным нашым можна замяніць Чым больш вы навучаецеся, прыкладаеце сьвядомых намаганьняў, трэніруеце ўвагу, тым больш значна памяншаецца рызыка дэмэнцыі. Так, рашэньне задач на ўвагу на 29 працэнтаў зьніжае рызыку дэмэнцыі празь 10 гадоў. Ежа для мозгу – гэта і рух, і, напрыклад, навучаньне ігры на музычным інструмэнце. Даведзена, што ў групе аднаяйкавых блізьнятаў рызыка дэмэнцыі меншая на 64% у таго зь іх, хто вучыўся ў музычнай школе. Назіраньні паказваюць, што білінгвы – людзі, якія напэраменку гавораць на дзьвюх мовах, -- захворваюць на Альцгаймэра на 4,3 гады пазьней, а сымптомы ў іх выяўляюцца на 5,1 года пазьней, чым у людзей, якія размаўляюць на адной мове. У цэлым павышэньне мазгавой актыўнасьці на 33% зьніжае рызыку разьвіцьця хваробы Альцгаймэра – вось такі эфэкт ведаў. Важныя для мозгу і камунікацыя, высокі ўзровень сацыяльнай актыўнасьці. Карміце ваш мозг якаснай ежай і разьвівайце карысныя сацыяльныя кантакты!
+Галоўнае – сэрцам не старэць!савецкая/расійская оптыка. Падумаю, чым адпаведным нашым можна замяніць Чым больш вы навучаецеся, прыкладаеце сьвядомых намаганьняў, трэніруеце ўвагу, тым больш значна памяншаецца рызыка дэмэнцыі. Так, рашэньне задач на ўвагу на 29 працэнтаў зьніжае рызыку дэмэнцыі празь 10 гадоў. Ежа для мозгу – гэта і рух, і, напрыклад, навучаньне ігры на музычным інструмэнце. Даведзена, што ў групе аднаяйкавых блізьнятаў рызыка дэмэнцыі меншая на 64\,\% у таго зь іх, хто вучыўся ў музычнай школе. Назіраньні паказваюць, што білінгвы – людзі, якія напэраменку гавораць на дзьвюх мовах, -- захворваюць на Альцгаймэра на 4,3 гады пазьней, а сымптомы ў іх выяўляюцца на 5,1 года пазьней, чым у людзей, якія размаўляюць на адной мове. У цэлым павышэньне мазгавой актыўнасьці на 33\,\% зьніжае рызыку разьвіцьця хваробы Альцгаймэра – вось такі эфэкт ведаў. Важныя для мозгу і камунікацыя, высокі ўзровень сацыяльнай актыўнасьці. Карміце ваш мозг якаснай ежай і разьвівайце карысныя сацыяльныя кантакты!
 
 Мы можам параўнаць кагнітыўны рэзэрв зь яшчэ адным паліўным бакам, які дазволіць нашаму мозгу даўжэй працаваць. Або з запасным камандным пунктам, які возьме на сябе кіраваньне пры ўзьніклай праблеме. Выснова простая: лішніх ведаў не бывае. І запас тут не адцягвае кішэню, а абараняе мозг. Чым больш у вас інтэлектуальнай нагрузкі на працягу ўсяго жыцьця, тым вышэйшая вашая абарона ад старэньня мозгу, нэўралагічнай траўмы і шэрагу хваробаў. Чым вышэйшы ўзровень кагнітыўнага рэзэрву, тым зь меншым кагнітыўным дэфіцытам вы будзеце пераносіць нават ужо ўзьніклую хваробу. Менавіта дзеля гэтага нам варта «бегчы з усіх ног, каб толькі застацца на тым жа месцы». Падобныя рэзэрвы існуюць і для іншых сыстэмаў арганізму. Напрыклад, вага касьцей. Калі чалавек на працягу жыцьця актыўна займаецца спортам, то ў яго разьвітыя косткі і пры ўзроставым зьніжэньні шчыльнасьці касьцяной масы рызыка астэапарозу ў яго меншая, чым у чалавека зь ніжэйшай масай костак.
 
@@ -446,8 +443,7 @@
 3. Пазыкі ці рэзэрвы? Складзіце сьпіс вашых пазыкаў і запасаў. Чым больш у вас любых рэзэрваў – фінансавых, навыкаў, ведаў, сяброў, здароўя, матывацыі, – тым лепш. Добра было б раз на год падрахоўваць свае асобасныя рэзэрвы.
 
 
-9. Культура здароўя
-
+\section{Культура здароўя}
 
 Да мяне на курсы часта прыходзяць людзі з жаданьнем ня толькі палепшыць сваё самаадчуваньне, але і стварыць культуру здароўя ў сям'і, каб паўплываць на сямейнікаў, каб дзеці вырасталі ў асяродзьдзі, дзе культывуюцца і заахвочваюцца самаразьвіцьцё, здаровае харчаваньне, спорт. Калі мы ствараем такую атмасфэру, то яна падтрымлівае нас саміх і спрыяе засваеньню каштоўнасьцяў здароўя аўтаматычна. Калі вы вырасьлі ў асяродзьдзі, дзе культуры здароўя не надавалася ўвагі, то ўсю працу трэба будзе прарабіць спачатку. Спадзяюся, гэтая кніга вам дапаможа.
 
@@ -501,7 +497,7 @@
 
 Рух. Абмежаваньне руху дзяцей і расстаньне зь імі пачынаецца ўжо ў радзільнях, вядомых сваім жорсткім і агрэсіўным стаўленьнем да маці і тугім спавіваньнем дзяцей. Затым дзіця абмяжоўваюць у руху, лаюць за тое, што яно лазіць, пэцкаецца, бегае, скача, шуміць. Але ж дзіця, якое не сваволіць, – імаверна, хворае дзіця! Рух для дзяцей – гэта ня толькі разьвіцьцё цела, але й разьвіцьцё мозгу, нават існуе такое паняцьце, як фізычны інтэлект.
 
-Кожныя дзесяць гадоў трывушчасьць падлеткаў падае на 10%, і 80% зь іх не выконваюць мінімум рухальнай актыўнасьці. Кожныя дадатковыя 15 хвілінаў актыўнасьці ў дзень павялічваюць на бал адзнакі дзяцей. Дзецям з дэфіцытам увагі дастаткова толькі 20 хвілінаў фізкультуры, каб палепшыць упраўнасьць.
+Кожныя дзесяць гадоў трывушчасьць падлеткаў падае на 10\,\%, і 80\,\% зь іх не выконваюць мінімум рухальнай актыўнасьці. Кожныя дадатковыя 15 хвілінаў актыўнасьці ў дзень павялічваюць на бал адзнакі дзяцей. Дзецям з дэфіцытам увагі дастаткова толькі 20 хвілінаў фізкультуры, каб палепшыць упраўнасьць.
 
 Не ўлазьце ў гульні і актыўнасьць дзяцей, давайце ім магчымасьць гуляць самастойна. Выключэньне – сытуацыі, дзе ўзьнікае рэальная (падкрэсьлю: рэальная) пагроза бясьпецы. Заахвочвайце актыўнасьць дзяцей з самага раньняга ўзросту, прапануйце ім розныя віды актыўнасьці, але не настойвайце, калі яны ня хочуць. Не рабіце заўваг і папрокаў дзецям у тым, што яны выпацкаліся, калі бегалі. Найлепшы спорт для дзяцей – гэта гульня. Гульні вучаць дзяцей узаемадзейнічаць, дамаўляцца паміж сабой.
 
