--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -1,8 +1,6 @@
-Разьдзел 10. 
+\chapter{Сацыяльнае атачэньне}
 
-Сацыяльнае атачэньне
-
-1. Сацыяльны мозг
+\section{Сацыяльны мозг}
 
 Я дапамагаю людзям стаць здаравейшымі, але й яны, у сваю чаргу, вельмі дапамагаюць мне. Камунікацыя з разумнымі, моцнымі, крэатыўнымі, упэўненымі людзьмі – гэта адна з самых прыемных характарыстык маёй працы. Ня будзе перабольшаньнем, калі я скажу, што яны мяне натхнялі і падбадзёрвалі ў важных рашэньнях і справах. Людзі вакол нас заўважна ўплываюць на тое, што мы робім, і тое, як мы сябе адчуваем.
 
@@ -57,13 +55,13 @@
 3. Наколькі таварыскім вы сябе лічыце? Ці спрабавалі вы разьвіваць гэты навык?
 
 
-2. Эпідэмія самоты
+\section{Эпідэмія самоты}
 
 Навукоўцы сур'ёзна занепакоеныя эпідэміяй самоты. Сябры і камунікацыя – гэта незаменныя вітаміны для нашага мозгу, бо ўся гісторыя чалавека прайшла ў цесным кантакце зь іншымі: ад вялікай сям'і да згуртаванай супольнасьці. Самота, нават не ўсьвядомленая, глыбока нефізыялягічная для нашага арганізма, нам эвалюцыйна прызначана быць у кантакце са сваякамі й суродзічамі. Наш мозг успрымае змушаную адзіноту як сымптом хваробы і рэагуе на яго адпаведна.
 
-Але цяпер грамадства ўсё больш атамізуецца, распадаецца. З аднаго боку, у нас усё больш магчымасьцяў мяняць сваё атачэньне, вандраваць, быць на сувязі. Адваротны бок мабільнасьці – гэта зьніжэньне колькасьці доўгатэрміновых сувязяў і слабоя ўкараненьне людзей. Мы бачым, што ўсё больш людзей пачуваюцца самотнымі: у заходніх краінах гэтая лічба складае 20-40% дарослага насельніцтва. Сучаснае грамадства часта завуць "вадкім" (liquid society), калі сталыя пераезды прыводзяць да таго, што ў нас менее грамадзкіх сувязяў, мы надаём недастаткова ўвагі адносінам у адрозьненьне ад традыцыйнай мадэлі вялікай сям'і, дзе пад адным дахам жывуць розныя пакаленьні.
+Але цяпер грамадства ўсё больш атамізуецца, распадаецца. З аднаго боку, у нас усё больш магчымасьцяў мяняць сваё атачэньне, вандраваць, быць на сувязі. Адваротны бок мабільнасьці – гэта зьніжэньне колькасьці доўгатэрміновых сувязяў і слабоя ўкараненьне людзей. Мы бачым, што ўсё больш людзей пачуваюцца самотнымі: у заходніх краінах гэтая лічба складае 20-40\,\% дарослага насельніцтва. Сучаснае грамадства часта завуць "вадкім" (liquid society), калі сталыя пераезды прыводзяць да таго, што ў нас менее грамадзкіх сувязяў, мы надаём недастаткова ўвагі адносінам у адрозьненьне ад традыцыйнай мадэлі вялікай сям'і, дзе пад адным дахам жывуць розныя пакаленьні.
 
-У Японіі паўмільёна хікікіморы (хікі) – людзей, якія імкнуцца да поўнай сацыяльнай ізаляцыі, у Швэцыі амаль палова гаспадарак – гэта самотныя і бязьдзетныя дарослыя людзі, у Брытаніі больш за 9 мільёнаў самотнікаў і самотніц, у ЗША больш за 40 мільёнаў людзей старэйшых за 45 гадоў самотныя. Калі ў 1900 годзе толькі 5% людзей лічылі сябе самотнымі, дык цяпер іх ня менш за 25%. Скарачаюцца і спосабы баўленьня часу, мы ўсё меней зьбіраемся разам на мерапрыемствы, радзей гуляем у гульні або займаемся спортам. Нават у межах адной сям'і людзі ўсё менш камунікуюць і радзей ядуць за адным сталом.
+У Японіі паўмільёна хікікіморы (хікі) – людзей, якія імкнуцца да поўнай сацыяльнай ізаляцыі, у Швэцыі амаль палова гаспадарак – гэта самотныя і бязьдзетныя дарослыя людзі, у Брытаніі больш за 9 мільёнаў самотнікаў і самотніц, у ЗША больш за 40 мільёнаў людзей старэйшых за 45 гадоў самотныя. Калі ў 1900 годзе толькі 5\,\% людзей лічылі сябе самотнымі, дык цяпер іх ня менш за 25\,\%. Скарачаюцца і спосабы баўленьня часу, мы ўсё меней зьбіраемся разам на мерапрыемствы, радзей гуляем у гульні або займаемся спортам. Нават у межах адной сям'і людзі ўсё менш камунікуюць і радзей ядуць за адным сталом.
 
 Прычынаў багата: гэта і зьмена эканамічных адносінаў, калі зьяўленьне пэнсій зрабіла пэнсіянэраў незалежнымі, і фінансавая незалежнасьць кожнага чалавека, які можа дазволіць сабе забясьпечваць выдаткі на жыцьцё самастойна, і ўзмацненьне дзяржавы. Парадокс: чым больш мы давяраем дзяржаве, тым меншая неабходнасьць зьвяртацца па дапамогу да сяброў. Ва ўсім сьвеце цяпер адбываецца зьніжэньне цікавасьці да грамадскіх аб'яднаньняў, памяншэньне колькасьці добраахвотных асацыяцыяў. Гэтыя працэсы могуць быць даволі небясьпечнымі для дэмакратычных краінаў, бо зьмяншаюць салідарнасьць грамадства.
 
@@ -77,7 +75,7 @@
 
 Анляйн-камунікацыя наўрад ці заменіць рэальную: у ёй няма фізычнага кантакту, невэрбальны кантакт – слабы, і няма магчымасьці атрымліваць досьвед сумеснага пражываньня падзеяў. Чым большы горад, тым больш адзіноты: высокая шчыльнасьць людзей спрыяе адчужанасьці. Тут часта выяўляецца звышасьцярожнасьць, калі людзі не карыстаюцца наяўнай магчымасьцю для камунікацыі, лічачы самоту больш спакойнай. Але гэта наша памылка, калі мы думаем, што самота палепшыць нашае самаадчуваньне. Насамрэч, яна можа адно пагоршыць яго, а вось камунікацыя – дапамагае. У буйных гарадах ужо зьявілася паслуга "сябар на гадзіну", калі вы можаце купіць увагу іншых людзей.
 
-Анляйн-камунікацыя ня можа замяніць рэальную, бо практычна 80% успрыманьня – гэта невэрбальная інфармацыя (позірк, гэсты і г.д.) суразмоўцы і агульны для вас кантэкст, які аб'ядноўвае (вы ў адзін час у адным месцы і пражываеце разам адзін момант). А вось пры камунікаваньні анляйн вы не атрымліваеце ўсёй інфармацыі пра суразмоўцу, вы ў розным кантэксьце, мо нават у розныя моманты часу. Усё гэта вядзе да таго, што мы губляем значную частку таго, што хочам данесьці, і нашмат горш разумеем суразмоўцу. Таму ўзьнікае моцнае скажэньне, якое прыводзіць да неадэкватных высноваў і заключэньняў. А сфармаванае меркаваньне потым ужо цяжка будзе зьмяніць.
+Анляйн-камунікацыя ня можа замяніць рэальную, бо практычна 80\,\% успрыманьня – гэта невэрбальная інфармацыя (позірк, гэсты і г.д.) суразмоўцы і агульны для вас кантэкст, які аб'ядноўвае (вы ў адзін час у адным месцы і пражываеце разам адзін момант). А вось пры камунікаваньні анляйн вы не атрымліваеце ўсёй інфармацыі пра суразмоўцу, вы ў розным кантэксьце, мо нават у розныя моманты часу. Усё гэта вядзе да таго, што мы губляем значную частку таго, што хочам данесьці, і нашмат горш разумеем суразмоўцу. Таму ўзьнікае моцнае скажэньне, якое прыводзіць да неадэкватных высноваў і заключэньняў. А сфармаванае меркаваньне потым ужо цяжка будзе зьмяніць.
 
 Камунікацыйны голад. Само па сабе пачуцьцё самоты не небясьпечнае, гэта біялягічны сыгнал нашага арганізма, як смага ці голад, і задаволіць яго можна камунікацыяй. Каб выжыць, камунікуй зь іншымі – так кажа нам інстынкт. Голад можна задаволіць як якаснай ежай, карыснай для здароўя, так і фастфудам, які яго сьцішае, але шкодны ў пэрспэктыве. Задаволіць пачуцьцё самоты можна і сацсеткамі ці плёткамі, але ў пэрспэктыве злоўжываньне анляйн-камунікацыяй пагаршае сытуацыю. Можна забіць пачуцьцё адзіноты і заяданьнем, тады фармуецца заганнае кола: я самотны, таму тоўсты, і я тоўсты, таму самотны.
 
@@ -92,23 +90,23 @@
 3. Што вы робіце, калі адчуваеце самоту?
 
 
-3. Сацыяльнае атачэньне і здароўе
+\section{Сацыяльнае атачэньне і здароўе}
 
 Лепш сто сяброў, чым сто рублёў: сапраўды, а колькі каштуе сябар? Ацэнкі, праведзеныя ў ЗША, паказваюць, што калі самотны чалавек заводзіць моцнае сяброўства, то ўзьдзеяньне на ўзровень шчасьця аналягічнае павышэньню гадавога заробку на 60 тысячаў даляраў.
 
 Сяброўства і камунікацыя – гэта прафіляктыка і лячэньне шматлікіх захворваньняў. Нават прымаўка ёсьць: чалавек безь сяброў што печ бяз дроў. Адчуваньне сувязі зь іншымі людзьмі – гэта глыбінная патрэба чалавека, таму калі ўжо не сяброўства, то актыўны ўдзел у сацыяльных справах, напрыклад валанцёрства, таксама павышае ўзровень задавальненьня. Адзін з надзейных спосабаў справіцца з болем – гэта дапамагаць іншым людзям, якім яшчэ горш. А вось сацыяльная ізаляцыя або адрыньваньне, здрада блізкіх выклікаюць боль ня менш рэальны, чым фізычны, і да таго ж ён можа не згасаць з часам.
 
-Калі дыета і фізычная актыўнасьць могуць да 20-30% зьнізіць рызыку сьмяротнасьці, то сямейная і сяброўская падтрымка зьніжае яе на 45%, а моцны шлюб – на 49%. Вельмі важна і карысна часьцей бываць сярод людзей, якія вас шчыра любяць, людзей, якія даюць вам паверыць у сябе, людзей, якія чакаюць ад вас посьпеху.
+Калі дыета і фізычная актыўнасьць могуць да 20-30\,\% зьнізіць рызыку сьмяротнасьці, то сямейная і сяброўская падтрымка зьніжае яе на 45\,\%, а моцны шлюб – на 49\,\%. Вельмі важна і карысна часьцей бываць сярод людзей, якія вас шчыра любяць, людзей, якія даюць вам паверыць у сябе, людзей, якія чакаюць ад вас посьпеху.
 
-Навукоўцы ацанілі шкоду змушанай самоты, прыраўняўшы яе да 15 скураным цыгарэтам у дзень, што перавышае нават небясьпеку атлусьценьня і маларухомага ладу жыцьця. Рызыка раньняй сьмерці сярод людзей, якія адчуваюць адзіноту і пакінутасьць, павялічваецца на 26%, жыцьцё на самоце ў кватэры ці доме – на 32%, сацыяльная ізаляцыя – на 29%. Прыналежнасьць да рэлігійных суполак зьніжае рызыку сьмерці на 20%, што было даведзена на прыкладзе прыхаджанаў цэркваў. Апроч зьніжэньня рызыкі шэрагу захворваньняў, гэта спрыяе ўсталяваньню дадатковых сацыяльных сувязяў.
+Навукоўцы ацанілі шкоду змушанай самоты, прыраўняўшы яе да 15 скураным цыгарэтам у дзень, што перавышае нават небясьпеку атлусьценьня і маларухомага ладу жыцьця. Рызыка раньняй сьмерці сярод людзей, якія адчуваюць адзіноту і пакінутасьць, павялічваецца на 26\,\%, жыцьцё на самоце ў кватэры ці доме – на 32\,\%, сацыяльная ізаляцыя – на 29\,\%. Прыналежнасьць да рэлігійных суполак зьніжае рызыку сьмерці на 20\,\%, што было даведзена на прыкладзе прыхаджанаў цэркваў. Апроч зьніжэньня рызыкі шэрагу захворваньняў, гэта спрыяе ўсталяваньню дадатковых сацыяльных сувязяў.
 
 У самотных вышэйшая рызыка ішэмічнай хваробы сэрца, гіпэртаніі, інсульту, дэмэнцыі, суіцыдальных спробаў і дэпрэсіі. Адзінота павялічвае рызыкі для здароўя, уплываючы на маркеры здароўя, такія як ліпідны профіль, С-рэактыўны бялок, артэрыяльны ціск і да т.п. Мэханізмы ў гэтага розныя: разьвіцьцё дэпрэсіі, зьніжэньне фізычнай актыўнасьці, павелічэньне ўзроўню стрэсу, зьніжэньне ўзроўню падтрымкі, грэбаваньне мэдыцынскім абслугоўваньнем і да т.п. Калі вы шмат часу праводзіце сярод іншых, то вам важна, як вы выглядаеце, як вы рухаецеся, таму вы сочыце за харчаваньнем і актыўнасьцю. Праз сацыяльную ізаляцыю зьяўляецца жаданьне "запусьціць сябе", павышаецца рызыка шкодных звычак, такіх як курэньне і алькагалізм.
 
-Маладыя і пажылыя людзі найболей уразьлівыя перад ізаляцыяй. Разьвітыя сацыяльныя сувязі ў падлеткаў абараняюць ад атлусьценьня ня горш, чым рухальная актыўнасьць. Чым больш у чалавека ва ўзросьце значных адносінаў зь іншымі людзьмі, тым лепш працуе мозг і менш рызыка Альцгаймэра. Анкалягічныя пацыенты лепш пераносяць хіміятэрапію, калі ў іх ёсьць суседзі па палаце. У таварыскіх людзей меншая рызыка дыябэту 2 тыпу, а ў людзей з дэфіцытам камунікацыі рызыка дыябэту ўзрастае на 42% у мужчынаў і на 112% у жанчынаў. Страта кожнага сябра на 12% павялічвае рызыку дыябэту.
+Маладыя і пажылыя людзі найболей уразьлівыя перад ізаляцыяй. Разьвітыя сацыяльныя сувязі ў падлеткаў абараняюць ад атлусьценьня ня горш, чым рухальная актыўнасьць. Чым больш у чалавека ва ўзросьце значных адносінаў зь іншымі людзьмі, тым лепш працуе мозг і менш рызыка Альцгаймэра. Анкалягічныя пацыенты лепш пераносяць хіміятэрапію, калі ў іх ёсьць суседзі па палаце. У таварыскіх людзей меншая рызыка дыябэту 2 тыпу, а ў людзей з дэфіцытам камунікацыі рызыка дыябэту ўзрастае на 42\,\% у мужчынаў і на 112\,\% у жанчынаў. Страта кожнага сябра на 12\,\% павялічвае рызыку дыябэту.
 
 Пры адзіноце мозг пачынае менш актыўна рэагаваць на станоўчыя стымулы і становіцца больш адчувальны да нэгатыўных, што пагаршае стрэсаўстойлівасьць. Самотным людзям трэба болей часу, каб заснуць, яны часьцей прачынаюцца ноччу і менш глыбока сьпяць. Нават невялікая размова зь незнаёмцамі або малазнаёмымі людзьмі зьніжае ўзровень стрэсу; павелічэньне колькасьці нават слабых сацыяльных сувязяў – напрыклад, прадавец крамы або сусед па доме, – дабратворна ўплывае на стрэсаўстойлівасьць і ўзровень шчасьця. А вось вварожасьць і непрыязь павялічваюць сьмяротнасьць ад сардэчна-сасудзістых захворваньняў незалежна ад іншых чыньнікаў. 
 
-Соцыюм і актыўнае даўгалецьце. У доўгажыхароў Акінавы ёсьць такія традыцыі, як мааі, юімару, наараі. Актыўнае сацыяльнае жыцьцё (мааі) – гэта супольны лад узаемавыручкі, неад'емная частка іх ладу жыцьця: побач з акінаўцам заўсёды ёсьць сябры і іх фінансавая і псыхалягічная падтрымка. Нават разуменьне, што ў выпадку бяды ты ня будзеш самотны, ужо дае антыстрэсавы эфэкт. Мааі – гэта сустрэчы аднадумцаў, якія зьбіраюцца для падтрымкі каго-небудзь або для заняцьця агульнай справай. Нават цяпер да 50% акінаўцаў уваходзяць у мааі, часта адзін чалавек уваходзіць у некалькі мааі – гэта могуць быць школьныя таварышы ці «клюбы па інтарэсах».
+Соцыюм і актыўнае даўгалецьце. У доўгажыхароў Акінавы ёсьць такія традыцыі, як мааі, юімару, наараі. Актыўнае сацыяльнае жыцьцё (мааі) – гэта супольны лад узаемавыручкі, неад'емная частка іх ладу жыцьця: побач з акінаўцам заўсёды ёсьць сябры і іх фінансавая і псыхалягічная падтрымка. Нават разуменьне, што ў выпадку бяды ты ня будзеш самотны, ужо дае антыстрэсавы эфэкт. Мааі – гэта сустрэчы аднадумцаў, якія зьбіраюцца для падтрымкі каго-небудзь або для заняцьця агульнай справай. Нават цяпер да 50\,\% акінаўцаў уваходзяць у мааі, часта адзін чалавек уваходзіць у некалькі мааі – гэта могуць быць школьныя таварышы ці «клюбы па інтарэсах».
 
 Юімару (мару – кола) – гэта праява роўнасьці, а наараі (праламленьне хлеба) – гэта традыцыя прымаць ежу ў кампаніі блізкіх. Сумеснае сталаваньне як у коле сям'і, так і зь сябрамі і калегамі – вельмі карысная ідэя, старайцеся радзей есьці ў адзіноце. Для даўгалецьця важна і тое, што пажылых паважаюць, яны захоўваюць права прыняцьця рашэньняў, зьяўляюцца апорай сям'і і аўтарытэтам. На жаль, у многіх заходніх краінах пажылыя людзі альбо аказваюцца ў ізаляцыі, альбо трапляюць у дамы састарэлых, дзе іх самастойнасьць абмяжоўваецца, што вельмі шкодна для здароўя і даўгалецьця.
 
@@ -125,7 +123,7 @@
 3. Ці дапамагае камунікацыя лепшаму самаадчуваньню пры стрэсе або хваробе?
 
 
-4. Сацыяльныя сувязі
+\section{Сацыяльныя сувязі}
 
 У працэсе эвалюцыі ў нашых продкаў паступова павялічваліся магчымасьці мозгу, каб запамінаць і апрацоўваць псыхалягічныя мадэлі стану розных людзей. Як мы ўжо казалі, сярэдняя колькасьць сувязяў – 150, ад 100 да 230 чалавек. Калі колькасьць расьце, мозгу цяжэй памятаць кожнага і выбудоўваць з ім адносіны. Бо для падтрыманьня ўсіх гэтых сувязей актуальнымі патрабуецца час і намаганьні. Калі ў вас узьнікаюць новыя кантакты, старыя паступова зьнікаюць.
 
@@ -186,7 +184,7 @@
 3. Вывучыце сваю генэалогію.
 
 
-5. Сацыяльнае заражэньне
+\section{Сацыяльнае заражэньне}
 
 «Нашыя паводзіны – нешта накшталт заразнай хваробы: добрыя людзі пераймаюць благія звычкі, падобна таму як здаровыя заражаюцца ад хворых». Фрэнсіс Бэкан, філёзаф. 
 
@@ -194,27 +192,27 @@
 
 Спрыяльнае атачэньне стварае пажыўнае асяродзьдзе, дзе людзі могуць неверагодна разьвіць свае таленты. Філёзафы ў Атэнах, кіраўнікі і псыхолягі ў Вэне – таленты заўсёды былі сканцэнтраваныя лякальна, у межах адных школ або гарадоў. Многія геніяльныя навукоўцы, пісьменьнікі, музыкі, прадпрымальнікі былі знаёмыя адно з адным, абменьваліся ідэямі і шчыльна камунікавалі. Таму найлепшы спосаб прасунуцца да сваёй мэты – быць фізычна бліжэй да месца, дзе ў вас зьявіцца больш настаўнікаў і аднадумцаў. Хочаце стаць акторам? Адпраўляйцеся ў Галівуд і ўладкоўвайцеся хаця б прыбіральнікам.
 
-Нашыя сувязі зь іншымі людзьмі залежаць ад іх сувязяў і гэтак далей. Даведзена, што на нас могуць уплываць сябры сяброў нашых сяброў. Можна ўявіць, што мы – як клетка сацыяльнага макраарганізма, своеасаблівага рою, па зьвёнах якога распаўсюджваюцца ідэі і звычкі. Дасьледаваньні паказалі, што, калі людзі пачынаюць набіраць вагу, іх сябры на 20% набіраюць лішнія кіло, а сябры сяброў – у сярэднім на 10%. Такое сацыяльнае заражэньне адбываецца неўсьвядомлена, мы проста схільныя капіяваць звычкі. Калі нашыя сябры пачынаюць часьцей есьці больш калярыйную ежу, мы «заражаемся» гэтым прыкладам.
+Нашыя сувязі зь іншымі людзьмі залежаць ад іх сувязяў і гэтак далей. Даведзена, што на нас могуць уплываць сябры сяброў нашых сяброў. Можна ўявіць, што мы – як клетка сацыяльнага макраарганізма, своеасаблівага рою, па зьвёнах якога распаўсюджваюцца ідэі і звычкі. Дасьледаваньні паказалі, што, калі людзі пачынаюць набіраць вагу, іх сябры на 20\,\% набіраюць лішнія кіло, а сябры сяброў – у сярэднім на 10\,\%. Такое сацыяльнае заражэньне адбываецца неўсьвядомлена, мы проста схільныя капіяваць звычкі. Калі нашыя сябры пачынаюць часьцей есьці больш калярыйную ежу, мы «заражаемся» гэтым прыкладам.
 
 Сацыяльнае заражэньне – гэта калі чалавек мяняе свае паводзіны пад узьдзеяньнем навакольных людзей, пры гэтым ён капіюе ня толькі ідэі, але й спосабы іх рэалізацыі. Эвалюцыйны навык капіяваць эмоцыі быў магутным і карысным мэханізмам выжываньня, важным для каардынацыі групы. Чым больш згуртавана мы дзеялі на паляваньні і пры абароне ад ворагаў, тым вышэй была імавернасьць выжыць. Нашы люстраныя нэўроны капіююць стрэс, радасьць ды іншыя эмоцыі.
 
 Сацыяльнае «заражэньне» распаўсюджваецца на мноства станаў: дэпрэсія, рызыка суіцыду, атлусьценьне, алькагалізм, курэньне, шлюб, дзеці, развод, узровень прыбытку і інш. Адна лыжка дзёгцю псуе бочку мёду – і напраўду, мы часта капіюем дзеі іншных, спрыяючы распаўсюджваньню звычкі або ідэі па ўсіх сваіх сацыяльных сувязях. Цікава, што мы можам нават не разумець сапраўдных прычынаў сваіх паводзінаў. Нам здаецца, што гэта нашае асабістае рашэньне, але гэта адно перайманьне.
 
-Калі ваш сябар пачаў курыць, то ваша рызыка закурыць павышаецца на 61%, у вашага сваяка нарадзілася дзіця – імавернасьць завесьці дзіця ў вас павышаецца на 15% на бліжэйшыя два гады. Мужчыны, у якіх калега скончыў жыцьцё самагубствам, маюць у 3,5 разы вышэйшую рызыку суіцыду.
+Калі ваш сябар пачаў курыць, то ваша рызыка закурыць павышаецца на 61\,\%, у вашага сваяка нарадзілася дзіця – імавернасьць завесьці дзіця ў вас павышаецца на 15\,\% на бліжэйшыя два гады. Мужчыны, у якіх калега скончыў жыцьцё самагубствам, маюць у 3,5 разы вышэйшую рызыку суіцыду.
 
 Хваля зьменаў рухаецца як да нас, так і ад нас. Так ці інакш, мы зьвязаныя з 400 людзьмі на ўзроўні двух поціскаў рукі, і кожны з гэтых людзей уплывае на нас. Таму важна ня толькі што робіць ваш сябар, але й якія ў яго сябры. Мы ўплываем на сяброў, яны на сваіх сяброў, тыя – на сваіх сяброў – так нашы ўчынкі могуць рэальна ўплываць на жыцьцё людзей, якіх мы ніколі ня бачылі. На шчасьце, добрыя звычкі гэтак жа капіююцца і распаўсюджваюцца, як і шкодныя.
 
 На нас уплывае ня толькі наша назіраньне за сабой, але й назіраньне іншых людзей за намі: і навакольныя, і дыстанцыйныя настаўнікі зьмяняюць нашы паводзіны. Ня толькі жывыя людзі: нават партрэты і проста намаляваныя вочы дзейнічаюць на наш сацыяльны мозг такім жа чынам. Яда ў прысутнасьці выяваў іншых людзей здаецца смачнейшай, чым звычайна, а вось шкодныя прадукты губляюць сваю прывабнасьць – у параўнаньні зь ядой на самоце. А выявы людзей, якія рухаюцца, павялічваюць фізычную актыўнасьць.
 
-Дзелячыся зь сябрамі шчасьлівымі момантамі свайго жыцьця, вы на 9% павялічвае іх імавернасьць шчасьця, а аповед пра няшчасьці можа прывесьці да зьніжэньня ўзроўню шчасьця на 7%.
+Дзелячыся зь сябрамі шчасьлівымі момантамі свайго жыцьця, вы на 9\,\% павялічвае іх імавернасьць шчасьця, а аповед пра няшчасьці можа прывесьці да зьніжэньня ўзроўню шчасьця на 7\,\%.
 
-З кім ты ясі. Узьдзейнічаюць на нас і хуткаплынныя кантакты: напрыклад, калі ў рэстаране ў афіцыянта залішняя вага, то людзі звычайна зьядаюць больш, у 4 разы часьцей замаўляюць дэсерт і на 17% часьцей алькаголь. Наш мозг схільны прыдумляць гісторыі, зьвязваючы ўсе факты навокал: калі ўсё вакол тоўстыя, то, магчыма, і табе варта назапасіць некалькі кіляграмаў, бо "быць як усе" – гэта камфортна для мозгу і, як ён лічыць, важна для выжываньня. За апошнія два гады жыхары ЗША сталі на 62% часьцей абедаць адны. Добра гэта ці дрэнна? З аднаго боку, пераяданьне сацыяльна заразнае: калі ваш блізкі сябар пакутуе на атлусьценьне, рызыка лішняй вагі ў вас павялічваецца на 171%, а імавернасьць своечасова спыніцца ў час яды ў кампаніі зьмяншаецца на 60%. Многія людзі знаёмыя з гэтым эфэктам не па чутках.
+З кім ты ясі. Узьдзейнічаюць на нас і хуткаплынныя кантакты: напрыклад, калі ў рэстаране ў афіцыянта залішняя вага, то людзі звычайна зьядаюць больш, у 4 разы часьцей замаўляюць дэсерт і на 17\,\% часьцей алькаголь. Наш мозг схільны прыдумляць гісторыі, зьвязваючы ўсе факты навокал: калі ўсё вакол тоўстыя, то, магчыма, і табе варта назапасіць некалькі кіляграмаў, бо "быць як усе" – гэта камфортна для мозгу і, як ён лічыць, важна для выжываньня. За апошнія два гады жыхары ЗША сталі на 62\,\% часьцей абедаць адны. Добра гэта ці дрэнна? З аднаго боку, пераяданьне сацыяльна заразнае: калі ваш блізкі сябар пакутуе на атлусьценьне, рызыка лішняй вагі ў вас павялічваецца на 171\,\%, а імавернасьць своечасова спыніцца ў час яды ў кампаніі зьмяншаецца на 60\,\%. Многія людзі знаёмыя з гэтым эфэктам не па чутках.
 
-У пажылых мужчынаў ежа ў адзіноце (пры наяўнасьці сям'і) у 2,4 разы павялічвае рызыку дэпрэсіі і на 50% рызыку сьмерці. Зь іншага боку, яда ў атачэньні сям'і і блізкіх аказвае магутны ахоўны эфэкт. У цэлым, у коле сям'і і блізкіх мы ямо менш, але хутчэй, а ў кампаніі – больш, але павольней. Акрамя гэтага, яда ў коле сям'і і сяброў зьяўляецца магутным інструмэнтам згуртоўваньня, выхаваньня, станоўча ўплывае і на пасьпяховасьць у школе, і на колькасьць зьяданай гародніны.
+У пажылых мужчынаў ежа ў адзіноце (пры наяўнасьці сям'і) у 2,4 разы павялічвае рызыку дэпрэсіі і на 50\,\% рызыку сьмерці. Зь іншага боку, яда ў атачэньні сям'і і блізкіх аказвае магутны ахоўны эфэкт. У цэлым, у коле сям'і і блізкіх мы ямо менш, але хутчэй, а ў кампаніі – больш, але павольней. Акрамя гэтага, яда ў коле сям'і і сяброў зьяўляецца магутным інструмэнтам згуртоўваньня, выхаваньня, станоўча ўплывае і на пасьпяховасьць у школе, і на колькасьць зьяданай гародніны.
 
 Дыстанцыёнка. Многія людзі і кампаніі заўважылі падзеньне крэатыўнасьці і прадуктыўнасьці супрацоўнікаў на дыстанцыёнцы. Людзі – істоты сацыяльныя, і на нашы паводзіны моцна ўплываюць іншыя людзі, хто значны для нас, мы схільныя капіяваць іх паводзіны і нават падладжвацца пад чаканьні. Усё гэта стварае сацыяльны ціск, аксытацынавую агульнасьць і ўключае племянныя інстынкты добра працаваць разам у імя выжываньня. Усё гэта матывуе нас на падкорцы, не вытрачаючы нашы валявыя працэсы. А калі людзей гэтых побач няма, то матывацыя падае і складаней засяродзіцца без сацыяльнага ціску.
 
-Высокапрадуктыўны супрацоўнік павышае прадуктыўнасьць усіх суседзяў на 15% у радыусе каля 7 мэтраў. Нават самыя слабыя супрацоўнікі шчыруюць на 10% лепей, калі побач працуюць іх калегі. Атрымліваецца, што эфэктыўнасьць распаўсюджваецца па камандзе, валодаючы "эфэктам пераліву". Зрэшты, для таксічных людзей тое самае – яны прыкметна зьніжаюць эфэктыўнасьць каманды. Атрымліваецца, што, калі за тваёй працай назіраюць, ты аўтаматычна больш сабраны і матываваны паводзіць сябе правільна. Прысутнасьць іншага чалавека аўтаматычна дапамагае вам засяродзіцца і робіць больш уважлівымі.
+Высокапрадуктыўны супрацоўнік павышае прадуктыўнасьць усіх суседзяў на 15\,\% у радыусе каля 7 мэтраў. Нават самыя слабыя супрацоўнікі шчыруюць на 10\,\% лепей, калі побач працуюць іх калегі. Атрымліваецца, што эфэктыўнасьць распаўсюджваецца па камандзе, валодаючы "эфэктам пераліву". Зрэшты, для таксічных людзей тое самае – яны прыкметна зьніжаюць эфэктыўнасьць каманды. Атрымліваецца, што, калі за тваёй працай назіраюць, ты аўтаматычна больш сабраны і матываваны паводзіць сябе правільна. Прысутнасьць іншага чалавека аўтаматычна дапамагае вам засяродзіцца і робіць больш уважлівымі.
 
 Гэта можна выкарыстоўваць, каб мяняць звычкі і працаваць у камандзе ў цеснай сувязі, напрыклад, наняць сабе куратара. Так худнеюць Weight Watchers і дапамагаюць адно аднаму ананімныя алькаголікі. А пад кіраўніцтвам трэнэра людзі выкладваюцца нашмат мацней, чым калі займаюцца ў адзіноце. Можна паспрабаваць працаваць у пастаянным відэакантакце з камандай на працягу ўсяго працоўнага дня. А можна і пад наглядам незнаёмца, як прапануе, напрыклад, сэрвіс Focusmate.
 
@@ -227,7 +225,7 @@
 3. Як уплываюць на вашую матывацыю людзі вакол вас?
 
 
-6. Разьвівайце сацыяльныя навыкі
+\section{Разьвівайце сацыяльныя навыкі}
 
 Як апэтыт прыходзіць падчас яды, так і радасьць ад камунікацыі прыходзіць падчас размовы. Вядома, ёсьць людзі больш таварыскія, у працэсе жыцьця ў кагосьці лепш атрымліваецца заводзіць знаёмствы, хтосьці больш камунікуе і яшчэ больш шліфуе свае навыкі. Іншыя з раньняга ўзросту саромеюцца, пазьбягаюць камунікацыі, што яшчэ мацней пагаршае гэтыя навыкі, – і так фармуецца чарговае заганнае кола. Разьвітыя сацыяльныя навыкі важныя для адаптыўнасьці і нашага фізычнага і сацыяльнага здароўя, робяць нас супэрпрафэсіяналамі і часта даюць магчымасьць прэтэндаваць на самыя прыбытковыя пасады. Посьпех ні да каго не прыходзіць паасобку, таму навыкі фармаваньня каманды і падтрыманьня ў ёй здаровай сацыяльнай атмасфэры вельмі запатрабаваныя.
 
@@ -296,7 +294,7 @@
 3. Наколькі ўважліва вы ўмееце слухаць суразмоўцу?
 
 
-7. Асабістыя межы
+\section{Асабістыя межы}
 
 Больш за дзьве тысячы гадоў таму ў Атэнах зарадзіўся рух стаіцызму. Яго інтэлектуальная спадчына – кнігі Сэнэкі, Эпіктэта і Марка Аўрэлія – прачытаныя мною ў поўным аб'ёме. Мой малодшы сын атрымаў імя Марк не ў апошнюю чаргу дзякуючы філёзафу-імпэратару, чыя кніга часта ляжала ў мяне на працоўным стале. Адной з найважнейшых ідэй стаіцызму было ўменьне адрозьніваць, што мы можам кантраляваць, а што – не, і праводзіць мяжу паміж гэтым. Мужна мяняць тое, на што мы можам узьдзейнічаць, і прымаць тое, на што мы ня здольныя паўплываць.
 
@@ -347,7 +345,7 @@
 3. Ці часта вы выходзіце за асабістыя межы?
 
 
-8. Небясьпекі сацыяльнага асяродзьдзя
+\section{Небясьпекі сацыяльнага асяродзьдзя}
 
 Камунікацыя дае шмат плюсаў, але можа быць і крыніцай праблемаў. Мы ўжо разабраліся зь небясьпекай сацыяльнага заражэньня, але высокі ўзровень згуртаванасьці можа прывесьці і да таго, што мы будзем схільныя падпарадкоўвацца групе. Нашы продкі жылі ў маленькіх згуртаваных групах і варагавалі зь іншымі групамі, так адбываўся міжгрупавы адбор. Менавіта таму нашы найлепшыя якасьці шчыльна зьвязаныя з горшымі. Так, альтруізм у людзей першапачаткова быў накіраваны толькі на чальцоў сваёй групы і разьвіваўся ў адзіным комплексе з варожасьцю да чужынцаў. 
 
@@ -369,7 +367,7 @@
 
 Важна памятаць: мы маем права ставіць свае інтарэсы вышэй за інтарэсы іншых людзей (не кранаючы пры гэтым іх асабістыя межы), мы маем права памыляцца і адчуваць самыя розныя пачуцьці, нават калі грамадзкая думка вызначае іх як «сацыяльна непрымальныя». Прызнавайцеся сабе шчыра, калі вы ўзрушаныя або злуяцеся. Мы можам і нават абавязаныя мяняць сваё меркаваньне, калі адкрыліся дадатковыя абставіны, і паважаць меркаваньне большасьці ці паважаных чальцоў грамадзтва мы павінны не таму, што яны паважаныя ці іх большасьць, а з аб'ектыўных аргумэнтаў.
 
-Таксічныя людзі. Чым больш людзей лезе ў ваша жыцьцё, тым хутчэй яно дае расколіну: сапраўды, у сьвеце ёсьць вялікая колькасьць людзей, якія імкнуцца, сьвядома ці неўсьвядомлена, парушаць межы навакольных, маніпуляваць эмоцыямі, палохаць або зьневажаць. Для абароны – перахапляйце кантроль у размове, мяняйце тэму, гаварыце пра суразмоўцу, а не пра сябе. Можна выкарыстаць вядомы аргумэнт прафэсара Праабражэнскага: "Проста не хачу". Не пускайцеся ў тлумачэньні – маніпулятары прымаюць гэта за праяву слабасьці. Дасьледаваньні паказалі, што калі ўкараніць у каманду аднаго чалавека зь неканструктыўнымі паводзінамі, то яе эфэктыўнасьць упадзе на 30-40%. Таму важная ня толькі наяўнасьць моцных удзельнікаў, але й адсутнасьць слабых. Сярод людзей, зь якімі вы камунікуеце, адзначце тых, зносіны зь якімі робяць вас шчасьлівымі і натхняюць, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце канкрэтныя крокі, каб павялічыць час камунікацыі зь першымі, а з другімі – максімальна скараціць і фармалізаваць.
+Таксічныя людзі. Чым больш людзей лезе ў ваша жыцьцё, тым хутчэй яно дае расколіну: сапраўды, у сьвеце ёсьць вялікая колькасьць людзей, якія імкнуцца, сьвядома ці неўсьвядомлена, парушаць межы навакольных, маніпуляваць эмоцыямі, палохаць або зьневажаць. Для абароны – перахапляйце кантроль у размове, мяняйце тэму, гаварыце пра суразмоўцу, а не пра сябе. Можна выкарыстаць вядомы аргумэнт прафэсара Праабражэнскага: "Проста не хачу". Не пускайцеся ў тлумачэньні – маніпулятары прымаюць гэта за праяву слабасьці. Дасьледаваньні паказалі, што калі ўкараніць у каманду аднаго чалавека зь неканструктыўнымі паводзінамі, то яе эфэктыўнасьць упадзе на 30-40\,\%. Таму важная ня толькі наяўнасьць моцных удзельнікаў, але й адсутнасьць слабых. Сярод людзей, зь якімі вы камунікуеце, адзначце тых, зносіны зь якімі робяць вас шчасьлівымі і натхняюць, і тых, хто толькі выцягвае вашу энэргію. Заплянуйце канкрэтныя крокі, каб павялічыць час камунікацыі зь першымі, а з другімі – максімальна скараціць і фармалізаваць.
 
 Крытыка. Многія людзі вельмі гостра ўспрымаюць крытыку, але гэта неад'емная частка нашага жыцьця. Бывае дэструктыўная крытыка, накіраваная супраць нас асабіста і звычайна эмацыйна афарбаваная, яна абясцэньвае нас, факусуецца толькі на нэгатыўных аспэктах, не дае шанцу выправіць. Але крытыка можа быць і канструктыўнай, па сутнасьці – звычайнай зваротнай сувязьзю. Часьцей за ўсё яна скіраваная на вырашэньне праблемы, а ня супраць вас, нясе пазітыўны зарад, дае магчымасьць выправіць, падбадзёрвае і натхняе на вырашэньне праблемы.
 
@@ -408,7 +406,7 @@
 3. Ці цяжка вам супраціўляцца аўтарытэтам? Ці ўмееце вы сьвядома не падпарадкоўвацца?
 
 
-9. Памяняйце асяродзьдзе
+\section{Памяняйце асяродзьдзе}
 
 Як вы цяпер разумееце, асяродзьдзе праграмуе ўсе нашы паводзіны. Мозг увесь час аналізуе навакольнае асяродзьдзе, у якім галоўнае для яго – гэта сацыяльныя сыгналы ад іншых людзей. Іх каштоўнасьці, эмоцыі, зьмест размоў, памкненьні і амбіцыі – усё гэта падсумоўваецца і ўплывае на нас. Нядзіўна, што шмат каго натхняюць менавіта іншыя людзі, няхай нават і віртуальныя. Таму для таго, каб умацаваць здароўе, важна зьмяніць сваё асяродзьдзе на здаровае. Памкненьні іншых людзей сумуюцца, накіроўваючы вас да дасягненьня мэты. Калі вакол вас усе клапоцяцца пра здароўе – вы скапіюеце іх і неўзаметку для сябе пачняце прымаць больш здаровыя рашэньні.
 
@@ -418,7 +416,7 @@
 
 Знайдзіце або стварыце супольнасьці. Добры сябар – гэта добра, але знайсьці або стварыць супольнасьць аднадумцаў яшчэ лепш. Асяродзьдзе блізкіх вам па мэтах і каштоўнасьцях людзей – выдатная крыніца сацыяльнай ежы для вашага мозгу, найлепшая інфармацыйная і эмацыйная падтрымка для вас. Людзі, якія ўжо пераадолелі праблемы, якія турбуюць вас цяпер, – жывы доказ, што ўсё магчыма ў гэтым жыцьці, і гэта неймаверна натхняе. Калі мы маем вялікае кола зносінаў і ўважлівыя да таго, што кажуць навакольныя нас людзі, то любая інфармацыя можа стаць крыніцай натхненьня і азарэньня. Гэта называецца сэрэндыпнасьць (інтуітыўная празорлівасьць) – здольнасьць рабіць глыбокія высновы і знаходзіць ідэі ў выпадковых назіраньнях. Бо наш мозг абмежаваны кагнітыўнымі фільтрамі, а калі мы слухаем розных людзей, то можам зразумець шмат таго, пра што нават ня думалі і ня мелі ўяўленьня, і выкарыстоўваць гэта ў сваіх мэтах.
 
-Грамадзянскі актывізм. Кожны чалавек мае магчымасьць займацца палітыкай і кіраваньнем, уплываючы на тое, што адбываецца вакол яго. Пачніце з вашага месца жыхарства ці працы, прымайце ўдзел у парадах, прафсаюзах, у розных грамадзянскіх актыўнасьцях. Стварыце супольнасьць, дзе вы зможаце культываваць і прасоўваць свае каштоўнасьці, – апроч іншага гэта прафіляктыка вывучанай бездапаможнасьці. Дасьледаваньні паказваюць, што дастаткова ўсяго 10% упэўненых людзей, каб зьмяніць меркаваньне грамадства.
+Грамадзянскі актывізм. Кожны чалавек мае магчымасьць займацца палітыкай і кіраваньнем, уплываючы на тое, што адбываецца вакол яго. Пачніце з вашага месца жыхарства ці працы, прымайце ўдзел у парадах, прафсаюзах, у розных грамадзянскіх актыўнасьцях. Стварыце супольнасьць, дзе вы зможаце культываваць і прасоўваць свае каштоўнасьці, – апроч іншага гэта прафіляктыка вывучанай бездапаможнасьці. Дасьледаваньні паказваюць, што дастаткова ўсяго 10\,\% упэўненых людзей, каб зьмяніць меркаваньне грамадства.
 
 Знайдзіце настаўніка. Настаўнік, як правіла, -- гэта добраахвотны дарадца ці настаўнік, які вядзе вас у розных сфэрах жыцьця: трэнэр для спартоўца, дасьведчаны лекар для пачаткоўца, бізнэс-кансультант, асобасны коуч дапамагаюць у самаразьвіцьці. Добры настаўнік, а лепей некалькі, – гэта важны крок для разьвіцьця. Настаўнік дзеліцца ведамі, сувязямі, досьведам, матывуе, можа падбадзёрыць і зьберагчы ад памылак. Гэта чалавек, якім вы захапляецеся і хочаце ў нечым быць да яго падобнымі. Знайдзіце найлепшых у справе, у якой вы імкняцеся стаць майстрам, і станьце ў іх чаляднікам, знайдзіце тое, чым вы можаце быць для іх карысныя.
 
