--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -1,9 +1,6 @@
-Разьдзел 11. 
+\chapter{Шкоднае асяродзьдзе}
 
-Шкоднае асяродзьдзе
-
-
-1. Нашае асяродзьдзе і здароўе
+\section{Нашае асяродзьдзе і здароўе}
 
 Кожны месяц мы робім мільён удыхаў і выдыхаў, і якасьць паветра вакол нас уплывае на наша здароўе, стан розуму і цела. Стан паветра ў памяшканьні можа быць у 2-5 разоў горшы, чым звонку, прычым гэта ня толькі сучасная праблема: у старажытнасьці людзі пакутавалі ад лішку дыму, абаграваючы свае хаты агмянямі без камінаў і паўнавартасных печаў. Актуальны чыньнік – гэта шум, якога становіцца ўсё больш у нашых гарадах і які не змаўкае нават ноччу, а таксама лішак сьвятла і цяпла. Уплывае на наша здароўе і электрамагнітнае выпраменьваньне. Навакольнае асяродзьдзе інтэнсіўна забруджваецца таксінамі: плястык, цяжкія мэталы, бісфэнолы, антыбіётыкі і інш. Для падтрыманьня і ўмацаваньня здароўя нам важна ня толькі займацца сабой, але й мяняць навакольнае асяродзьдзе, зь якім мы так шчыльна злучаныя. Калі гены памяняць нельга, звычкі – цяжка, то асяродзьдзе – куды лягчэй.
 
@@ -30,29 +27,29 @@
 3. У якім месцы і асяродзьдзі вы б хацелі жыць? Апішыце ваш ідэальны дом, мястэчка, горад, краіну.
 
 
-2. Бруднае паветра і здароўе
+\section{Бруднае паветра і здароўе}
 
 Многія людзі лічаць, што ім бракуе кіслароду ў памяшканьні або на вуліцы, хоць рэальная прычына нядужаньня, як правіла, зусім іншая – забруджваньне паветра або сындром гіпэрвэнтыляцыі (пачашчанае дыханьне пры стрэсе, якое можа прывесьці да галавакружэньня).
 
 Бруднае паветра – адзін з самых небясьпечных шкоднасных чыньнікаў навакольнага асяродзьдзя. Сур'ёзнае навуковае вывучэньне шкоды бруднага паветра пачалося ў 1952 годзе, калі Лёндан накрыў смог ад спальваньня вугалю, што прывяло да тысячаў сьмерцяў. З таго часу чысьціня паветра стала рэгулявацца заканадаўча, але да вырашэньня праблемы нам далёка.
 
-Нягледзячы на забарону спальваньня вугалю, праблема бруднага паветра становіцца ўсё больш актуальнай праз павелічэньне колькасьці транспарту і працы заводаў. Больш за 90% жыхароў плянэты сутыкаюцца з праблемай забруджваньня паветра. Апроч вонкавага забруджваньня існуе і ўнутранае, калі ў жылых памяшканьнях паляць, гатуюць ежу, топяць печы з дрэннай вэнтыляцыяй, паляць духмянкі і г.д.
+Нягледзячы на забарону спальваньня вугалю, праблема бруднага паветра становіцца ўсё больш актуальнай праз павелічэньне колькасьці транспарту і працы заводаў. Больш за 90\,\% жыхароў плянэты сутыкаюцца з праблемай забруджваньня паветра. Апроч вонкавага забруджваньня існуе і ўнутранае, калі ў жылых памяшканьнях паляць, гатуюць ежу, топяць печы з дрэннай вэнтыляцыяй, паляць духмянкі і г.д.
 
 У 30 разоў танчэй за волас! Мацней за ўсё на нас уплываюць дробныя часьціцы, якія ўтвараюцца пры згараньні паліва. Яны разносяцца са струмянямі паветра, доўгі час не асядаючы на зямлю. Узважаныя часьціцы ўяўляюць сабой складаную сумесь, якая можа патрапіць глыбока ў лёгкія, а празь іх – у кроў. Вылучаюць дзьве яе асноўныя разнавіднасьці: PM10 часьціцы, дыямэтрам менш за 10 мкм, і PM2,5 часьціцы, дыямэтрам менш за 2,5 мкм. Уявіце сабе волас, дык вось часьціца PM10 у сем разоў меншая за яго дыямэтар, а PM 2,5 – меншая ў 30 разоў. Чыстым лічыцца паветра са сярэднегадавым утрыманьнем часьціц PM 2,5 у паветры 10 мкг/м3 і сярэднясутачным 25 мкг/м3.
 
 Часьціцы валодаюць рознымі па складзе кампанэнтамі: яны могуць утрымоўваць мэталы (Fe, Ni, Cu, Co, Cr), араматычныя гідракарбоны, эндатаксіны і да т.п. Таксама ў паветры можа быць шмат іншых забруджвальнікаў: бэнзапірэн, які ўтвараецца пры згараньні цьвёрдага паліва, сажысты вуглярод, прыземны азон, аксіды азоту, двухвокіс серы і інш. Як жартуюць жыхары мэгаполісаў, «ня толькі дыхаеш сьвежым паветрам на вуліцы, але і насычаесься мікраэлемэнтамі».
 
-Чым небясьпечна? Бруднае паветра зьвязанае з 16% усіх сьмерцяў, што практычна ў 15 разоў больш, чым гіне сёньня ва ўсім сьвеце ад войнаў і іншых формаў гвалту. Бруднае паветра скарачае працягласьць жыцьця больш чым на год. Высокі ўзровень часьціц PM2.5 адказны за 3% усіх сардэчна-сасудзістых сьмерцяў і за 5% сьмерцяў ад раку лёгкіх. У самых забруджаных гарадах вырашэньне праблемы магло б павялічыць чаканую працягласьць жыцьця на 20 месяцаў.
+Чым небясьпечна? Бруднае паветра зьвязанае з 16\,\% усіх сьмерцяў, што практычна ў 15 разоў больш, чым гіне сёньня ва ўсім сьвеце ад войнаў і іншых формаў гвалту. Бруднае паветра скарачае працягласьць жыцьця больш чым на год. Высокі ўзровень часьціц PM2.5 адказны за 3\,\% усіх сардэчна-сасудзістых сьмерцяў і за 5\,\% сьмерцяў ад раку лёгкіх. У самых забруджаных гарадах вырашэньне праблемы магло б павялічыць чаканую працягласьць жыцьця на 20 месяцаў.
 
-Бруднае паветра выклікае хуткія і павольныя зваротныя рэакцыі. Хуткая рэакцыя зьвязаная з раздражненьнем рэцэптараў лёгкіх, а павольны адказ – з павелічэньнем ўзроўню хранічнага запаленьня і ўзроўню С-рэактыўнага бялку. Кожныя дадатковыя 5 мкг/м3 часьціц на 1,3% павялічваюць узровень С-рэактыўнага бялку. А запаленьне, як мы ведаем, павялічвае рызыку шматлікіх захворваньняў і паскарае старэньне, узмацняючы згусальнасьць крыві, павялічваючы канцэнтрацыю фібрынагену. Бруднае паветра зьвязанае з павелічэньнем таўшчыні комплексу інтым-мэдыя (маркер прагрэсаваньня атэрасклерозу) і павялічвае рызыку інсульту і інфаркту. Таксама забруджваньне паветра павялічвае рызыку дыябэту, прыводзіць да зьніжэньня адчувальнасьці да інсуліну, пагаршае якасьць сну, зьніжае функцыі нырак.
+Бруднае паветра выклікае хуткія і павольныя зваротныя рэакцыі. Хуткая рэакцыя зьвязаная з раздражненьнем рэцэптараў лёгкіх, а павольны адказ – з павелічэньнем ўзроўню хранічнага запаленьня і ўзроўню С-рэактыўнага бялку. Кожныя дадатковыя 5 мкг/м3 часьціц на 1,3\,\% павялічваюць узровень С-рэактыўнага бялку. А запаленьне, як мы ведаем, павялічвае рызыку шматлікіх захворваньняў і паскарае старэньне, узмацняючы згусальнасьць крыві, павялічваючы канцэнтрацыю фібрынагену. Бруднае паветра зьвязанае з павелічэньнем таўшчыні комплексу інтым-мэдыя (маркер прагрэсаваньня атэрасклерозу) і павялічвае рызыку інсульту і інфаркту. Таксама забруджваньне паветра павялічвае рызыку дыябэту, прыводзіць да зьніжэньня адчувальнасьці да інсуліну, пагаршае якасьць сну, зьніжае функцыі нырак.
 
 Небясьпечным зьяўляецца і кароткачасовае забруджваньне: пры рэзкім забруджваньні паветра павялічваецца колькасьць шпіталізацый з астмай, пнэўманіяй, абструктыўнай хваробай лёгкіх, сардэчнымі прыступамі. Чым бруднейшае паветра ў горадзе, тым больш небясьпечна ў ім жыць.
 
-Уплыў на мозг. Бруднае паветра пагаршае кагнітыўныя здольнасьці і памяншае ўзровень шчасьця, уплывае на мозг, зьмяншае прадукцыйнасьць, мяняе наша стаўленьне да рызыкі, павялічвае агрэсію і, як вынік, злачыннасьць. Запаленьне ад бруднага паветра зьвязана з рызыкай дэпрэсіі і суіцыду: павелічэньне забруджваньня паветра на 10 мкг/м3 на працягу трох дзён павышала рызыку самагубства на 2%. Пражываньне паблізу ажыўленых трасаў павялічвае рызыку нэўрадэгенэратыўных захворваньняў.
+Уплыў на мозг. Бруднае паветра пагаршае кагнітыўныя здольнасьці і памяншае ўзровень шчасьця, уплывае на мозг, зьмяншае прадукцыйнасьць, мяняе наша стаўленьне да рызыкі, павялічвае агрэсію і, як вынік, злачыннасьць. Запаленьне ад бруднага паветра зьвязана з рызыкай дэпрэсіі і суіцыду: павелічэньне забруджваньня паветра на 10 мкг/м3 на працягу трох дзён павышала рызыку самагубства на 2\,\%. Пражываньне паблізу ажыўленых трасаў павялічвае рызыку нэўрадэгенэратыўных захворваньняў.
 
-Рызыка хваробы Альцгаймэра на 12% вышэйшая ў тых, хто жыве за 50 мэтраў ад дарогі, у параўнаньні з тымі, хто жыве на адлегласьці 200 і больш мэтраў. Пятая частка ўсіх выпадкаў захворваньняў можа быць выклікана брудным паветрам.
+Рызыка хваробы Альцгаймэра на 12\,\% вышэйшая ў тых, хто жыве за 50 мэтраў ад дарогі, у параўнаньні з тымі, хто жыве на адлегласьці 200 і больш мэтраў. Пятая частка ўсіх выпадкаў захворваньняў можа быць выклікана брудным паветрам.
 
-Асабліва адчувальныя да бруднага паветра дзеці, цяжарныя, старыя, людзі з хранічнымі захворваньнямі. Часьціцы сажы могуць патрапіць нават у пляцэнту – так, забруджваньне павялічвае рызыку заганаў разьвіцьця, выклікае затрымку росту і зьніжэньне аб'ёму мозгу ў дзяцей, пагаршэньне іх псыхічнага здароўя, уключаючы рызыку дзіцячых дэпрэсій. У розных дасьледаваньнях бруднае паветра павялічвае рызыку аўтызму ад 12 да 76%. Дасьледаваньні на жывёлах пацьвярджаюць, што пражываньне паблізу ажыўленых трасаў шкодзіць мозгу нашчадкаш яшчэ на раньніх стадыях разьвіцьця, павялічваючы ўзровень нэўразапаленьня.
+Асабліва адчувальныя да бруднага паветра дзеці, цяжарныя, старыя, людзі з хранічнымі захворваньнямі. Часьціцы сажы могуць патрапіць нават у пляцэнту – так, забруджваньне павялічвае рызыку заганаў разьвіцьця, выклікае затрымку росту і зьніжэньне аб'ёму мозгу ў дзяцей, пагаршэньне іх псыхічнага здароўя, уключаючы рызыку дзіцячых дэпрэсій. У розных дасьледаваньнях бруднае паветра павялічвае рызыку аўтызму ад 12 да 76\,\%. Дасьледаваньні на жывёлах пацьвярджаюць, што пражываньне паблізу ажыўленых трасаў шкодзіць мозгу нашчадкаш яшчэ на раньніх стадыях разьвіцьця, павялічваючы ўзровень нэўразапаленьня.
 
 Пытаньні і заданьні
 
@@ -63,7 +60,7 @@
 3. Ці шмат часу вы праводзіце ў транспарце?
 
 
-3. Барацьба з брудным паветрам
+\section{Барацьба з брудным паветрам}
 
 Джэнтльмэн у 5 гадзінаў раніцы вывальваецца з бару і зьдзіўлена пытаецца: "Швайцар, што за дзіўны пах?" – "Гэта чыстае паветра, сэр". Спадзявацца на свае органы пачуцьцяў для ацэнкі паветра не заўсёды добрая ідэя, бо мы прыстасоўваемся да любога асяродзьдзя і перастаём заўважаць працягла дзейсныя раздражняльнікі. Таму нам патрэбныя аб'ектыўныя спосабы вымярэньня якасьці паветра.
 
@@ -73,13 +70,13 @@
 
 Кожны мэтар мае значэньне, бо з аддаленьнем ад крыніцы забруджваньне скарачаецца экспанентна, выхлапы разводзяцца чыстым паветрам. Гуляйце ці рабіце прагулкі не ў гадзіну пік і не адразу ж пасьля яе заканчэньня. Калі вы ідзяце з маленькімі дзецьмі, то паднімайце іх на рукі, каб трымаць вышэй за ўзровень выхлапных газаў. Ня стойце каля самай дарогі, калі чакаеце зялёнага сыгнала сьвятлафора. Памятайце, што важная ня проста адсутнасьць трасы або завода побач, але і кірунак ветру. Калі праз надвор'е, слабы вецер ці пажары ў горадзе паўстаў смог, па магчымасьці выязджайце за горад ці трымайце дома ўключаны фільтр ачысткі паветра (пра фільтры ніжэй) пры закрытых вокнах.
 
-Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50-60%. Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы "зялёны" маршрут.
+Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50-60\,\%. Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы "зялёны" маршрут.
 
 Гэтае правіла тычыцца і кіроўцаў, бо доўгая дарога за рулём і заторы павялічваюць рызыку ўдыханьня бруднага паветра. Не прыціскайце нос свайго аўтамабіля да выхлапной трубы машыны, якая стаіць наперадзе. У заторы лепш закрыць вокны і адключыць вэнтыляцыю салёна, гэта дазволіць зьменшыць забруджваньне ад суседніх машын. Па магчымасьці, менш карыстайцеся аўтамабілем у гадзіну пік. У некаторых машынах, напрыклад у Tesla, усталяваныя вельмі якасныя фільтры салёна, зьвяртайце на гэта ўвагу пры выбары і абслугоўваньні аўто.
 
-Маскі. Звычайныя маскі, якія няшчыльна прылягаюць да твару, маюць вельмі слабую эфэктыўнасьць, затрымліваючы толькі 20% дробных часьціц. Выбірайце спэцыяльныя маскі з маркіроўкай N95 або N99 (затрымліваюць 95 і 99% часьціц 2.5). Улічвайце памер, зручнасьць, шчыльнасьць прыляганьня, працягласьць выкарыстаньня маскі, эфэктыўнасьць і тэрмін службы фільтраў. Звычайна такія маскі маюць працягласьць выкарыстаньня ня больш за 40 гадзінаў. Маркіроўка C абазначае вугальны фільтр, які затрымлівае азон або аксід серы, маркіроўка V – наяўнасьць клапана для вывядзеньня лішку вільготнасьці, Р – здольнасьць фільтраваць і арганічныя забруджвальнікі.
+Маскі. Звычайныя маскі, якія няшчыльна прылягаюць да твару, маюць вельмі слабую эфэктыўнасьць, затрымліваючы толькі 20\,\% дробных часьціц. Выбірайце спэцыяльныя маскі з маркіроўкай N95 або N99 (затрымліваюць 95 і 99\,\% часьціц 2.5). Улічвайце памер, зручнасьць, шчыльнасьць прыляганьня, працягласьць выкарыстаньня маскі, эфэктыўнасьць і тэрмін службы фільтраў. Звычайна такія маскі маюць працягласьць выкарыстаньня ня больш за 40 гадзінаў. Маркіроўка C абазначае вугальны фільтр, які затрымлівае азон або аксід серы, маркіроўка V – наяўнасьць клапана для вывядзеньня лішку вільготнасьці, Р – здольнасьць фільтраваць і арганічныя забруджвальнікі.
 
-Зніжэньне ўзьдзеяньня забруджанага паветра працуе. Так, зьніжэньне канцэнтрацыі PM2,5 за ўсё на 2,5 мкг/м3 прыводзіла да зьніжэньня сьмяротнасьці ад усіх прычынаў на 3,5%. Шматразова апісаны выпадкі, калі спыненьне работы заводаў праз забастоўкі прыводзіла да зьніжэньня захваральнасьці ў навакольных населеных пунктах у некалькі разоў: зьніжалася частата астмы, бранхіту, кашлю, кан'юктывіту.
+Зніжэньне ўзьдзеяньня забруджанага паветра працуе. Так, зьніжэньне канцэнтрацыі PM2,5 за ўсё на 2,5 мкг/м3 прыводзіла да зьніжэньня сьмяротнасьці ад усіх прычынаў на 3,5\,\%. Шматразова апісаны выпадкі, калі спыненьне работы заводаў праз забастоўкі прыводзіла да зьніжэньня захваральнасьці ў навакольных населеных пунктах у некалькі разоў: зьніжалася частата астмы, бранхіту, кашлю, кан'юктывіту.
 
 Уступайце ў шэрагі грамадзянскіх актывістаў, патрабуйце ад мясцовых уладаў пераносу шкоднай прамысловасьці або ўстаноўкі ачышчальных збудаваньняў, стварэньня пешаходных вуліц, абмежаваньні руху асабістых аўтамабіляў, разьвіцьця грамадскага транспарту, пераходу на электрамабілі, барацьбы са спальваньнем паліва, ляснымі пажарамі.
 
@@ -104,11 +101,11 @@
 3. Пры неабходнасьці купіце ачышчальнік паветра для вашай кватэры. Адзначце, як зьмянілася ваша самаадчуваньне пры паляпшэньні якасьці паветра.
 
 
-4. Вуглякіслы газ у памяшканьні
+\section{Вуглякіслы газ у памяшканьні}
 
 У офісах увесь час ідуць бітвы паміж тымі, каму душна, і тымі, хто баіцца скавышоў. Ёсьць людзі, якія асабліва гостра адчуваюць якасьць паветра, а ёсьць тыя, хто баіцца сьвежага паветра. Мы ўжо пагаварылі пра важнасьць чыстага паветра на вуліцы, але вялікае значэньне мае паветра, якім вы дыхаеце дома і на працы. Паветра ў памяшканьні часта ў некалькі разоў бруднейшае, чым звонку. Калі мы заходзім з вуліцы ў памяшканьне, то можам адчуць сьпёртасьць паветра, але гэтае адчуваньне хутка зьнікае – мы да яго звыкаем. Сьпёртасьць – гэта часта лішак вуглякіслага газу, які выдыхаюць людзі. Гэта нябачны, але шкодны ў высокіх канцэнтрацыях чыньнік.
 
-Сярэдняя канцэнтрацыя вуглякіслага газу (СО2) складае ў вонкавым паветры 0,035%, ці 350 ppm. Але ў гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў – гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў выніку жыцьцядзейнасьці. Каб падтрымліваць узровень СО2 на нармальных 800 ppm на аднаго чалавека ў пакоі, патрабуецца вэнтыляцыя каля 34 м3/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а вэнтыляцыя не працуе, то ўзровень СО2 хутка пачне зашкальваць.
+Сярэдняя канцэнтрацыя вуглякіслага газу (СО2) складае ў вонкавым паветры 0,035\,\%, ці 350 ppm. Але ў гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў – гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў выніку жыцьцядзейнасьці. Каб падтрымліваць узровень СО2 на нармальных 800 ppm на аднаго чалавека ў пакоі, патрабуецца вэнтыляцыя каля 34 м3/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а вэнтыляцыя не працуе, то ўзровень СО2 хутка пачне зашкальваць.
 
 Праблема вэнтыляцыі існуе: з аднаго боку, будаўнікі часта грэбуюць нормамі, робячы няўдалыя сыстэмы вэнтыляцыі, эфэктыўнасьць работы якіх ніхто не правярае. Зь цягам часу шахты могуць забівацца брудам, зашывацца – звонку гэта не прыкметна. Зьяўленьне плястыкавых вокнаў яшчэ пагоршыла сытуацыю. Бо ў драўляных вокнах было шмат невялікіх шчылінаў, якія забясьпечвалі мікравэнтыляцыю, а цяпер гэтага няма. Часта мы закрываемся "наглуха" для цішыні або цяпла. Зьяўленьне ізалявальных матэрыялаў, ушчыльняльнікаў, пракладак для дзьвярэй і вокнаў дазваляе нам цалкам зашпунтаваць сябе ў хатах. А калі прытоку паветра няма, то і вэнтыляцыя перастае працаваць як мае быць.
 
@@ -135,7 +132,7 @@
 3. Пры неабходнасьці, усталюйце пасіўныя або актыўныя сыстэмы прытоку паветра.
 
 
-5. Шум
+\section{Шум}
 
 Шум не раздражняе адно тады, калі ты ў ім удзельнічаеш – так кажуць, і гэта праўда. Сярод стрэсагенных чыньнікаў для насельнікаў кватэр шум упэўнена займае адно зь першых месцаў. Сваю кватэру, дзе я цяпер пішу гэтыя радкі, я абраў, у тым ліку, па крытэры цішыні – верхні паверх, вуглавая кватэра і вокны на тры бакі, стары цагляны дом. Прымусіў мяне гэта зрабіць няўдалы папярэдні досьвед з шумнымі суседзямі. Выдатна разумею фразу гішпанскага пісьменьніка Рамона Сэрна, што "ўключаны пыласос у суседа ўцягвае ўсе нашы думкі".
 
@@ -159,7 +156,7 @@
 
 Пачынаючы з узроўню 45 дБ, кожныя дадатковыя 5дБ павялічваюць акружнасьць таліі на 2 мм. Дзеці, якія растуць у шуме, адстаюць ад аднагодкаў: кожныя 5дБ шуму дадаюць яшчэ 2 месяцы да таго моманту, як дзіця пачне чытаць. Пастаяннае ўзьдзеяньне інтэнсіўнага шуму (80 дБ і больш) можа стаць прычынай гастрыту і нават язвавай хваробы, бо могуць парушацца сакраторная і маторная функцыі страўніка.
 
-Адно з дасьледаваньняў паказала, што жыхары вёскі, над якой пралятаюць самалёты, часьцей зьвяртаюцца да лекара, чым жыхары вёсак, разьмешчаных убаку ад авіямаршрутаў. Галоўнай крыніцай гарадзкога, то бок вонкавага шуму часьцей за ўсё зьяўляецца аўтатранспарт – больш за 60% скаргаў на шум жыхароў усяго сьвету зьвязаныя менавіта з аўтамабілямі і грамадзкім транспартам.
+Адно з дасьледаваньняў паказала, што жыхары вёскі, над якой пралятаюць самалёты, часьцей зьвяртаюцца да лекара, чым жыхары вёсак, разьмешчаных убаку ад авіямаршрутаў. Галоўнай крыніцай гарадзкога, то бок вонкавага шуму часьцей за ўсё зьяўляецца аўтатранспарт – больш за 60\,\% скаргаў на шум жыхароў усяго сьвету зьвязаныя менавіта з аўтамабілямі і грамадзкім транспартам.
 
 Гукі ўплываюць на нас і больш тонкімі мэханізмамі, мяняючы наша ўспрыманьне рэальнасьці. Напрыклад, француская музыка ў краме павялічвае імавернасьць таго, што вы купіце францускае віно. Гучная музыка аслабляе ўспрыманьне салодкага і салёнага, што можа правакаваць пераяданьне. Таму важна есьці пад прыемную і нягучную музыку. Часьцей слухайце любімыя песьні і мэлёдыі – гэта выдатная антыстрэсавая мэтодыка.
 
@@ -172,7 +169,7 @@
 3. Вам лягчэй працаваць у цішыні ці фонавы шум вам дапамагае?
 
 
-6. Як змагацца з шумам
+\section{Як змагацца з шумам}
 
 Самая эфэктыўная мера – гэта заканадаўчыя абмежаваньні ды іх выкананьне. Забараняюцца самыя розныя крыніцы шуму, так, у XVI стагоддзі каралева Брытаніі Лізавета забараніла скандалы і сямейныя сваркі пасьля 22.00, а ў Швайцарыі і сёньня забаронена пасьля 22.00 карыстацца душам і прыбіральняй. Вы можаце выступіць за ціхую гадзіну ў вашым доме, прагаласаваць за выкарыстаньне шумапаглынальных пакрыцьцяў у месцах агульнага карыстаньня, забарону праслухоўваньня гучнай музыкі і да т.п. Зялёныя зоны ў горадзе і павелічэньне колькасьці электратранспарту памяншаюць колькасьць шуму.
 
@@ -211,15 +208,15 @@
 3. Падумайце, як можна аптымізаваць вашае жыльлё для зьніжэньня ўзроўню шумавога забруджваньня з вонкавых і ўнутраных крыніцаў?
 
 
-7. Хворы дом – хворыя жыхары
+\section{Хворы дом – хворыя жыхары}
 
 Калі мы разглядаем старадаўнія карціны віктарыянскай эпохі, то ўвагу, апроч іншага, прыцягвае яркі зялёны колер сьценаў і ярка-зялёнае адзеньне. Сама каралева Вікторыя любіла смарагдава-зялёныя сукенкі, чым задала моду сярод сваіх падначаленых. Гэтая фарба адценьня «парыская зеляніна» ў сваёй аснове ўтрымлівала мыш'як, і ёю фарбавалі сьцены, тканіны, цацкі. Такія «зялёныя» дамы падрывалі здароўе сваіх жыхароў і выклікалі цяжкія атручэньні, у тым ліку і са сьмяротным зыходам. Толькі праз сто гадоў выкарыстаньня гэтага фарбавальніка яго шкоду ўсьвядомілі ў поўнай меры і замянілі бясьпечнымі аналягамі.
 
-Сучасныя рэаліі такія, што больш за 90% свайго часу чалавек праводзіць у памяшканьні. Гэтаму спрыяюць узмацненьне урбанізацыі, ушчыльненьне гарадоў і пагаршэньне гарадзкога асяродзьдзя. На жаль, гарады часта робяцца ўсё больш небясьпечнымі для фізычнага, псыхалягічнага і сацыяльнага здароўя, таму дом становіцца крэпасьцю, сховішчам і месцам адпачынку. З павелічэньнем колькасьці людзей, якія працуюць дыстанцыённа, дом становіцца офісам, спартзаляй, канцэртнай заляй, студыяй, рэстарацыяй і гэтак далей. Разьвіцьцё інтэрнэт-тэхналёгіяў імкліва скарачае неабходнасьць пакідаць кватэру. Таму ўплыў хатняга асяродзьдзя на здароўе заслугоўвае пільнай увагі.
+Сучасныя рэаліі такія, што больш за 90\,\% свайго часу чалавек праводзіць у памяшканьні. Гэтаму спрыяюць узмацненьне урбанізацыі, ушчыльненьне гарадоў і пагаршэньне гарадзкога асяродзьдзя. На жаль, гарады часта робяцца ўсё больш небясьпечнымі для фізычнага, псыхалягічнага і сацыяльнага здароўя, таму дом становіцца крэпасьцю, сховішчам і месцам адпачынку. З павелічэньнем колькасьці людзей, якія працуюць дыстанцыённа, дом становіцца офісам, спартзаляй, канцэртнай заляй, студыяй, рэстарацыяй і гэтак далей. Разьвіцьцё інтэрнэт-тэхналёгіяў імкліва скарачае неабходнасьць пакідаць кватэру. Таму ўплыў хатняга асяродзьдзя на здароўе заслугоўвае пільнай увагі.
 
 Калі я пішу гэтыя радкі, амаль палова чалавецтва закрытая ў лакдаўне ў сваіх дамах праз ковід, што прымушае па-новаму пераасэнсаваць бясьпеку сваёй хаты. Бо здароўе гаспадароў залежыць ад здароўя іх дома!
 
-Сындром хворага будынка. Ужо больш за сто гадоў існуе тэрмін «сындром хворага будынка» – калі выяўляецца прамая прычынна-выніковая сувязь паміж станам здароўя і пражываньнем у канкрэтным памяшканьні. Шэраг дасьледаваньняў паказвае, што каля 30% будынкаў шкодзяць здароўю сваіх насельнікаў. Рэдка ўдаецца знайсьці адну-адзіную прычыну праблемаў – гэта зьвязана з тым, што сымптомы разладу здароўя ў людзей узьнікаюць пры знаходжаньні ў памяшканьнях, дзе парамэтры асяродзьдзя не перавышаюць агульнапрынятых гранічна дапушчальных канцэнтрацыяў. Найбольш імавернай прычынай гэтага зьяўляецца эфэкт узаемнага патэнцыяваньня дзеяньня дзясяткаў розных рэчываў у паветры памяшканьняў.
+Сындром хворага будынка. Ужо больш за сто гадоў існуе тэрмін «сындром хворага будынка» – калі выяўляецца прамая прычынна-выніковая сувязь паміж станам здароўя і пражываньнем у канкрэтным памяшканьні. Шэраг дасьледаваньняў паказвае, што каля 30\,\% будынкаў шкодзяць здароўю сваіх насельнікаў. Рэдка ўдаецца знайсьці адну-адзіную прычыну праблемаў – гэта зьвязана з тым, што сымптомы разладу здароўя ў людзей узьнікаюць пры знаходжаньні ў памяшканьнях, дзе парамэтры асяродзьдзя не перавышаюць агульнапрынятых гранічна дапушчальных канцэнтрацыяў. Найбольш імавернай прычынай гэтага зьяўляецца эфэкт узаемнага патэнцыяваньня дзеяньня дзясяткаў розных рэчываў у паветры памяшканьняў.
 
 Усе нэгатыўныя чыньнікі можна падзяліць на дзьве групы:
 
@@ -248,7 +245,7 @@
 3. Колькі часу вы праводзіце дома? На вуліцы? У іншых памяшканьнях?
 
 
-8. Пыл, кляшчы і цьвіль
+\section{Пыл, кляшчы і цьвіль}
 
 Варта страсянуць посцілку ў сонечнае надвор'е, як паветра напаўняецца незьлічонымі часьціцамі пылу – гэта тое, чым мы дыхаем у сябе дома. Пыл можа нашкодзіць нашай псыхіцы і ў выпадку, калі сваякі і госьці няўхваляльна ківаюць галавой пры выглядзе пласта пылу, і нашаму арганізму – калі мы яе ўдыхаем. Сапраўды, «пылінка ня бачная, ды выесьць вочы». Вылучаюць чатыры асноўныя крыніцы ўзьнікненьня пылу: жывёлы, людзі, разбурэньне матэрыялаў дома і прынесеныя з вуліцы часьціцы.
 
@@ -270,11 +267,11 @@
 
 Цьвіль можа пасяліцца ў сыстэмах апалу, кандыцыянэрах, пасудамыйных машынах, кветкавых гаршках, ванных, ня кажучы ўжо пра гарышчы і гаражы. Пазьбягайце працяглага знаходжаньня ў такіх памяшканьнях, кантралюйце гідраізаляцыю, сачыце за сьценамі, дахам і камунікацыямі: у іх не павінна быць працёкаў вады. Калі адна са сьценаў дома адсырэла, ня стаўце ўсутыч да яе мэблю. Высушвайце ручнікі, вяхоткі, сьмецьцевыя вёдры і не дазваляйце ім стаяць мокрымі доўгі час. Дбайнае ацяпленьне памяшканьняў зімой і восеньню памяншае рызыку цьвілі. Для апрацоўкі заражаных паверхняў выкарыстоўвайце спэцыяльныя супрацьплесьневыя сродкі, якія дазваляюць зьнішчыць яе на ўсёй глыбіні пранікненьня ў матэрыял.
 
-Антыпылавы дызайн. Арганізуйце сваю кватэру так, каб у ёй назапашвалася менш пылу і яе было зручна прыбіраць. Пазбаўцеся ад дываноў і палавікоў або зьменшыце іх колькасьць – гэта самыя галоўныя пылазборнікі. Шторы ня толькі зацямняюць кватэру, але й зьбіраюць шмат пылу. Зрэшты, цяпер ужо зьявіліся ў продажы запавесы, ачышчальныя ад пылу. Важна падтрымліваць вільготнасьць у 50-60% – гэта перашкаджае залішняму ўтварэньню і распаўсюджваньню пылу: чым ніжэй вільготнасьць, тым больш будзе пылу. Адзеньне захоўвайце ў закрытых шафах. Ідэальна захоўваць розныя статуэткі і кнігі ў шафах за шклом. Прызнаюся, што нават мне гэта не ўдалося арганізаваць. Памятайце, што трэба рэгулярна адсоўваць мэблю і прыбіраць пылавыя пасткі, часта гэта месцы за батарэямі або на задняй сьценцы лядоўні.
+Антыпылавы дызайн. Арганізуйце сваю кватэру так, каб у ёй назапашвалася менш пылу і яе было зручна прыбіраць. Пазбаўцеся ад дываноў і палавікоў або зьменшыце іх колькасьць – гэта самыя галоўныя пылазборнікі. Шторы ня толькі зацямняюць кватэру, але й зьбіраюць шмат пылу. Зрэшты, цяпер ужо зьявіліся ў продажы запавесы, ачышчальныя ад пылу. Важна падтрымліваць вільготнасьць у 50-60\,\% – гэта перашкаджае залішняму ўтварэньню і распаўсюджваньню пылу: чым ніжэй вільготнасьць, тым больш будзе пылу. Адзеньне захоўвайце ў закрытых шафах. Ідэальна захоўваць розныя статуэткі і кнігі ў шафах за шклом. Прызнаюся, што нават мне гэта не ўдалося арганізаваць. Памятайце, што трэба рэгулярна адсоўваць мэблю і прыбіраць пылавыя пасткі, часта гэта месцы за батарэямі або на задняй сьценцы лядоўні.
 
 Здаровая прыборка. Вільготная прыборка – важны складнік догляду за домам, ладзьце яе 1-2 разы на тыдзень. Звычайная вільготная прыборка выклікае прыкметнае скарачэньне мікрачасьціц пылу, і толькі праз тры дні іх колькасьць вяртаецца да ранейшага ўзроўню. Важна пазьбягаць выкарыстаньня хімічных мыйных сродкаў, лепш за ўсё ўжываць ачышчэньне парай і бясьпечнымі спосабамі, напрыклад вадой з содай.
 
-Устаноўлена, што ў хатніх гаспадыняў, якія рэгулярна прыбіралі дом з дапамогай хімічных мыйных сродкаў, на 40% часьцей сустракаўся недых, у параўнаньні з тымі, хто іх не выкарыстоўваў. Заўсёды праводзіце прыборку зьверху ўніз, каб пазьбегнуць разносу пылу. Старадаўняя традыцыя выносіць рэчы на сонечнае сьвятло не пазбаўленая сэнсу. Рэч у тым, што ўльтрафіялет ня толькі забівае кляшчоў, але й за пару гадзінаў раскладае іх алергены, чаго ня можа зрабіць нават кіпячэньне.
+Устаноўлена, што ў хатніх гаспадыняў, якія рэгулярна прыбіралі дом з дапамогай хімічных мыйных сродкаў, на 40\,\% часьцей сустракаўся недых, у параўнаньні з тымі, хто іх не выкарыстоўваў. Заўсёды праводзіце прыборку зьверху ўніз, каб пазьбегнуць разносу пылу. Старадаўняя традыцыя выносіць рэчы на сонечнае сьвятло не пазбаўленая сэнсу. Рэч у тым, што ўльтрафіялет ня толькі забівае кляшчоў, але й за пару гадзінаў раскладае іх алергены, чаго ня можа зрабіць нават кіпячэньне.
 
 Калі мы пачынаем перабіраць кнігі ці пыльныя рэчы, то канцэнтрацыя пылу драматычна павялічваецца і можа дасягаць 1000 мг на кубамэтар паветра пры норме 10 мг. Мэханічнае ачышчэньне цьвілі ў 33 разы павялічвае канцэнтрацыю зароднікаў у паветры.
 
@@ -295,7 +292,7 @@
 3. Падчас прыборкі праверце цяжкадаступныя месцы за шафамі, батарэямі, тэхнікай.
 
 
-9. Электрамагнітныя палі ды электрастатычная электрычнасьць
+\section{Электрамагнітныя палі ды электрастатычная электрычнасьць}
 
 У паветры лунае нешта нябачнае, што робіць шчасьлівымі ўсіх людзей. Пазбавіўшыся гэтага, людзі адчуваюць моцную пакуту і губляюць сэнс жыцьця. На жаль, гэта не флюіды любові, а Wi-Fi і іншыя хвалі. Электрамагнітнае выпраменьваньне напаўняе нашае жыцьцё, але пытаньне яго ўзьдзеяньня на здароўе ўсё яшчэ вывучаецца.
 
@@ -332,26 +329,26 @@
 3. Не насіце тэлефон у кішэні і карыстайцеся гарнітурай для доўгіх размоваў.
 
 
-10. Вільготнасьць паветра
+\section{Вільготнасьць паветра}
 
-Вільготнасьць паветра – важны складнік здаровага і камфортнага мікраклімату. Камфортнай лічыцца вільготнасьць ад 40% да 60%, прычым для высокіх тэмпэратураў (больш за 30°) трэба імкнуцца да вільготнасьці 30-50%, пры тэмпэратурах менш за 20° C, наадварот, камфортнай будзе вільготнасьць 50-70%. Пры больш высокай вільготнасьці мы лепей пераносім нізкія тэмпэратуры, а пры нізкай – горай.
+Вільготнасьць паветра – важны складнік здаровага і камфортнага мікраклімату. Камфортнай лічыцца вільготнасьць ад 40\,\% да 60\,\%, прычым для высокіх тэмпэратураў (больш за 30°) трэба імкнуцца да вільготнасьці 30-50\,\%, пры тэмпэратурах менш за 20° C, наадварот, камфортнай будзе вільготнасьць 50-70\,\%. Пры больш высокай вільготнасьці мы лепей пераносім нізкія тэмпэратуры, а пры нізкай – горай.
 
 Нэгатыўны ўплыў падвышанай вільготнасьці. Вялікая канцэнтрацыя вільгаці не дазваляе целу чалавека падтрымліваць звычайную тэмпэратуру – не працуе належным чынам мэханізм тэрмарэгуляцыі. Каб астудзіць сябе, чалавечае цела выкарыстоўвае потавыдзяленьне. Пот, выпараючыся з паверхні скуры, выводзіць лішнюю цеплыню. Але што, калі выпарацца няма куды? Тады арганізм пачынае працаваць з падвышанай сілай, а гэта вядзе да зваротнага выніку – перагрэву. Калі пот зь цела выпараецца павольна, то цела астуджаецца вельмі слаба, і мы пачуваемся не зусім камфортна.
 
 Асаблівае значэньне гэта мае для людзей, якія пакутуюць ад атэрасклерозу, гіпэртаніі, разнастайных захворваньняў сардэчна-сасудзістай сыстэмы, – яны мусяць быць асабліва асьцярожныя ў сьпёку пры высокай вільготнасьці. Існуе магчымасьць рэзкага загостраньня захворваньняў і некантраляваных прыступаў.
 
-Нэгатыўны ўплыў сухога паветра. Чым ніжэй тэмпэратура паветра, тым менш у ім утрымліваецца вады. Таму вонкавае паветра, які награецца батарэямі, мае нізкую адносную вільготнасьць. Зімой яе значэньне можа падаць да 20%. А аптымальныя значэньні – 40-60%. На наша здароўе вільготнасьць паветра аказвае прамы і непрамы ўплыў, давайце іх разьбяром.
+Нэгатыўны ўплыў сухога паветра. Чым ніжэй тэмпэратура паветра, тым менш у ім утрымліваецца вады. Таму вонкавае паветра, які награецца батарэямі, мае нізкую адносную вільготнасьць. Зімой яе значэньне можа падаць да 20\,\%. А аптымальныя значэньні – 40-60\,\%. На наша здароўе вільготнасьць паветра аказвае прамы і непрамы ўплыў, давайце іх разьбяром.
 
 Прамы ўплыў вільготнасьці. Чым менш вільготнасьць паветра, тым мацней выпарэньне са скуры і сьлізістых абалонак. У нашым носе і горле ёсьць тонкі пласт сьлізі, які абараняе нас ад трапляньня вірусаў, гэтая сьлізь увесь час абнаўляецца і перашкаджае перасыханьню. Калі паветра сухое на працягу доўгага часу, то ў гэтай абароне ўтворацца расколіны, якія і зьяўляюцца ўваходнаю брамай для вірусаў. Успомніце, як выглядае высахлая лужына ў глінянай зямлі – яе дно пакрытае расколінамі. Перасыханьне сьлізістай дае нам нязручнасьць, таму мы кранаемся сьлізістай і тым самым пераносім вірус да «ўваходнае брамы». І таму гэта павялічвае імавернасьць інфікаваньня – і сьлізісты бар'ер слабы, і самі перанесьлі вірус. Таксама сухасьць павялічвае колькасьць сымптомаў, зьвязаных з абцяжараным дыханьнем, памяншае выпрацоўку сьлязы, павялічвае стомленасьць вачэй. Калі вы шмат гаворыце, то ваш голас хутчэй стоміцца і будзе горш гучаць у сухім паветры. Таксама нізкая ці занадта высокая вільготнасьць уплывае на тэрмарэгуляцыю і якасьць сну.
 
-Непрамы ўплыў вільготнасьці. Непрамы ўплыў вільготнасьці заключаецца ў тым, як яна ўплывае на цыркуляцыю ў паветры пылу і аэразоляў. Чым менш вільготнасьць, тым больш пылу і алергенаў знаходзіцца ў паветры і тым даўжэй яны вісяць. Таму вільготнае паветра і чысьцейшае. У сухім паветры таксама запасіцца і больш электрастатычнай напругі. Вільготнасьць уплывае на выдзяленьне са сьценаў і матэрыялаў фармальдэгіду. У сухім паветры таксама даўжэй лётаюць аэразолі са зьмешчанымі ў іх вірусамі і бактэрыямі. Стабільнасьць вірусу мінімальная пры 50% вільготнасьці. Калі вільготнасьць 23%, то ў паветры 70-77% вірусных часьціц, якія зьявіліся пры размове ці кашлі, а вось пры вільготнасьці 43% іх застаецца толькі 14%. Гэта датычыцца і грыпу і каранавірусу.
+Непрамы ўплыў вільготнасьці. Непрамы ўплыў вільготнасьці заключаецца ў тым, як яна ўплывае на цыркуляцыю ў паветры пылу і аэразоляў. Чым менш вільготнасьць, тым больш пылу і алергенаў знаходзіцца ў паветры і тым даўжэй яны вісяць. Таму вільготнае паветра і чысьцейшае. У сухім паветры таксама запасіцца і больш электрастатычнай напругі. Вільготнасьць уплывае на выдзяленьне са сьценаў і матэрыялаў фармальдэгіду. У сухім паветры таксама даўжэй лётаюць аэразолі са зьмешчанымі ў іх вірусамі і бактэрыямі. Стабільнасьць вірусу мінімальная пры 50\,\% вільготнасьці. Калі вільготнасьць 23\,\%, то ў паветры 70-77\,\% вірусных часьціц, якія зьявіліся пры размове ці кашлі, а вось пры вільготнасьці 43\,\% іх застаецца толькі 14\,\%. Гэта датычыцца і грыпу і каранавірусу.
 
 Таксама сухое паветра вядзе да назапашваньня электрастатычнай электрычнасьці, назапашваньня пылу і павольнейшаму яе асяданьню. Мікрачасьціцы пылу яшчэ мацней раздражняюць высахлыя сьлізістыя абалонкі. Калі вы змушаныя доўгі час знаходзіцца ў памяшканьні з сухім паветрам, то памажце нос любым алеем: тлушчавая плёнка на паверхні сьлізістай будзе абараняць яе ад высыханьня. Прамываньне носа воднымі растворамі, на жаль, мае эфэкт кароткатэрміновы – ня больш за паўгадзіны.
 
 
 
 
-Як кантраляваць вільготнасьць. Каб вымераць вільготнасьць у памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у вас можа быць некалькі датчыкаў у розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40-60%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з паветра і затым, пры высыханьні, аддаваць.
+Як кантраляваць вільготнасьць. Каб вымераць вільготнасьць у памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у вас можа быць некалькі датчыкаў у розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40\,\% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40-60\,\%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з паветра і затым, пры высыханьні, аддаваць.
 
 Пытаньні і заданьні
 
@@ -362,7 +359,7 @@
 3. Піце дастаткова вады, гэта дапамагае целу падтрымліваць водны балянс і цеплаабмен.
 
 
-11. Пазьбягайце кантакту з таксінамі
+\section{Пазьбягайце кантакту з таксінамі}
 
 Як мудра заўважыў нямецкі паэт Готхальд Эфраім Лесінг, «яд, які ня дзейнічае адразу, не становіцца менш небясьпечным». У пачатку разьдзелу мы казалі пра таксічны фарбавальнік XIX стагоддзі на аснове мыш'яку, цяпер жа нас атачае нашмат большая колькасьць злучэньняў, часта не да канца вывучаных. Многія эфэкты злучэньняў праяўляюцца не адразу, а па меры назапашваньня, і іх таксічнасьць сумуецца.
 
@@ -393,7 +390,7 @@
 3. Якіх паверхняў вы кранаецеся голай скурай? Ідэальна насіць адзеньне і сядзець на паверхнях і тканінах з натуральных матэрыялаў.
 
 
-12. Дрэннае асьвятленьне
+\section{Дрэннае асьвятленьне}
 
 Пагроза для здароўя ў тым, што спэктар і інтэнсіўнасьць штучнага сьвятла моцна адрозьніваюцца ад сонечнага. Адыліж наша вока – гэта практычна частка мозгу, вынесеная на пэрыфэрыю! Штучнае сьвятло мае нізкую колераперадачу, часта яго крыніцы пульсуюць, ён мае спэктар выпраменьваньня без ультрафіялету, часта зь лішкам хваляў сіняга спэктру і з дэфіцытам чырвонага, характарызуецца слабой інтэнсіўнасьцю ў параўнаньні з сонцам. Многія лямпы маюць ірваны спэктар у адрозьненьне ад цэльнага сонечнага. Усё гэта стварае шматлікія пагрозы для здароўя: парушэньне выпрацоўкі мэлятаніну, пагаршэньне выпрацоўкі дафаміну і сератаніну, павышэньне нагрузкі на зрокавы апарат, збой цыркадных рытмаў. Усё гэта павялічвае рызыку шматлікіх захворваньняў, ад дыябэту і дэпрэсіі да хваробы Паркінсана. Калі ўжо мы змушаныя знаходзіцца пры штучным асьвятленьні, важна яго зрабіць як мага бясьпечнейшым для здароўя. Давайце разьбяромся, як правільна абраць найболей здаровую лямпу для дому: сьветлавая плынь, спэктар, колеравая тэмпэратура, колераперадача, пульсацыя.
 
