--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -1,9 +1,6 @@
-Разьдзел 7. 
+\chapter{Стрэсаўстойлівасьць}
 
-Стрэсаўстойлівасьць
-
-
-1. Што такое стрэс?
+\section{Што такое стрэс?}
 
 На працягу нашага жыцьця мы сутыкаемся як са спрыяльнымі магчымасьцямі, так і зь перашкодамі рознай ступені складанасьці. Для забесьпячэньня выжываньня арганізм разьвіў здольнасьць рэагаваць на пагрозу. Калі мы гаворым пра стрэс, то маем на ўвазе адначасова дзеяньне стрэсара і набор ахоўных стрэсавых рэакцый на яго. У нас ёсьць дзьве рэакцыі: даць рады з прычынай стрэсу або зьмяніць сваю рэакцыю на яго, адаптавацца да сытуацыі або здацца.
 
@@ -88,7 +85,7 @@
 3. Якая ваша самая тыповая рэакцыя на стрэс? Ударыць, уцячы, замерці, дрыжаць? Ці дапамагае яна вам? Ці ўдавалася вам зьмяніць сваю тыповую рэакцыю?
 
 
-2. Уплыў стрэсу на здароўе
+\section{Уплыў стрэсу на здароўе}
 
 Прымаўка сьцьвярджае, што «ўсе хваробы ад нэрваў, і толькі некаторыя – ад задавальненьня». Які стрэс найбольш небясьпечны? Той, што выклікае зьнясіленьне, якім мы не можам кіраваць. Замест адаптацыі такі стрэс выклікае страту рэсурсаў, выгараньне, зьнясіленьне, аж да дэпрэсіі. Гэта суправаджаецца адчуваньнем катастрофы, стратай сэнсу і задавальненьня ў жыцьці. Небясьпечная не аднаразовая стрэсавая рэакцыя, а менавіта сыстэматычнае ўзьдзеяньне на працягу доўгага часу: «шкодны» стрэс мае выразны назапашвальны эфэкт. У сучасным жыцьці мы сутыкаемся зь лішкам стрэсу эмацыйнага, некантраляванага, хранічнага, і пры гэтым нам можа бракаваць гострага стрэсу.
 
@@ -104,7 +101,7 @@
 
 Некантраляваны гостры стрэс празьмернай сілы павялічвае рызыку сьмерці. Напрыклад, крах біржы, як і землятрус, павялічвае ў найбліжэйшыя дні сьмяротнасьць ад сардэчна-сасудзістых захворваньняў. Нават пройгрыш любімай каманды можа павысіць сьмяротнасьць, а вось выйгрыш можа зьнізіць рызыку сьмяротнасьці бліжэйшымі днямі – такая адказнасьць перад заўзятарамі. Пастаноўка дыягназу «рак» павялічвае рызыку сардэчна-сасудзістай сьмерці ў першы тыдзень амаль у шэсьць разоў, у першы месяц – у тры разы, а да канца года рызыка становіцца сярэдняй.
 
-Стрэс нэгатыўна ўплывае на працу мозгу, зьніжае нэўраплястычнасьць, сінаптагенэз, нэўрагенэз, што вядзе да пагаршэньня памяці і павелічэньня рызыкі дэмэнцыі. Хранічныя стрэсы фізычна зьмяншаюць памер мозгу, пакутуюць найважнейшыя структуры мозгу: гіпакамп (памяншаецца на 7-15%) і кара лобных доляў. Вобласьці прэфрантальнай кары адказваюць за самакантроль, а чым горшы самакантроль – тым горш вы даяце рады са стрэсам. І зноў фармуецца заганнае кола.
+Стрэс нэгатыўна ўплывае на працу мозгу, зьніжае нэўраплястычнасьць, сінаптагенэз, нэўрагенэз, што вядзе да пагаршэньня памяці і павелічэньня рызыкі дэмэнцыі. Хранічныя стрэсы фізычна зьмяншаюць памер мозгу, пакутуюць найважнейшыя структуры мозгу: гіпакамп (памяншаецца на 7-15\,\%) і кара лобных доляў. Вобласьці прэфрантальнай кары адказваюць за самакантроль, а чым горшы самакантроль – тым горш вы даяце рады са стрэсам. І зноў фармуецца заганнае кола.
 
 Стрэс і сэрца. Стрэс адмоўна ўзьдзейнічае на сэрца: узмацняе працу сімпатыйнай нэрвовай сыстэмы, пагаршае кровазабесьпячэньне, правакуе разьвіцьцё арытмій, стымулюе згусаньне крыві і г.д. Чым больш напругі на працы, тым вышэйшая рызыка атэрасклерозу каранарных сасудаў і падвышанага ціску. У Японіі нават існуе тэрмін «каросі» – сьмерць (інсульт або інфаркт) на працоўным месцы ад перапрацоўкі. Высокі ўзровень перажытага стрэсу летась у чатыры разы павялічвае рызыку інсульту. А ўсяго некалькі месяцаў перапрацоўкі па 10 гадзінаў за дзень на траціну павялічваюць імавернасьць інсульту.
 
@@ -163,7 +160,7 @@
 3. Як стрэс уплывае на вашыя паводзіны і якія шкодныя звычкі ён у вас правакуе? Пачніце весьці дзёньнік стрэсу, каб заўважыць гэта.
 
 
-3. Стрэс і энэргія
+\section{Стрэс і энэргія}
 
 Гостры стрэс можа зарадзіць нас энэргіяй, і стрэсавую падзею мы можам утаймаваць як неаб'езджанага жарабца. Хранічны ж стрэс – ён як паразіт, павольна высмоктвае сілы і энэргію з дня ў дзень. Як мы ўжо гаварылі, стрэсаўстойлівасьць непасрэдна зьвязаная з нашым узроўнем энэргіі і колькасьцю рэсурсаў. Чым менш у нас энэргіі, тым горш мы супрацьстаім стрэсу і тым менш у нас застаецца энэргіі – узьнікае замкнёнае кола. Доўгае ўзьдзеяньне стрэсараў, кепскае аднаўленьне і нізкія рэсурсы прыводзяць да перагрузкі і зьнясіленьня, а гэта зьмяншае ўзровень даступнай нам энэргіі, якую мы можам накіраваць на вырашэньне сваіх праблемаў. Многія людзі, якія хочуць зьмяніць сваё жыцьцё, ня могуць гэтага зрабіць проста таму, што не валодаюць дастатковым узроўнем энэргіі.
 
@@ -212,7 +209,7 @@
 3. Складзіце сьпіс «уцечак» вашай энэргіі, дзе розныя крыўды, трывогі зьядаюць вашыя сілы.
 
 
-4. Антыстрэсавы рэжым
+\section{Антыстрэсавы рэжым}
 
 Антыстрэсавы рэжым – гэта своеасаблівы стрэсавы тайм-мэнэджмэнт, у якім важна пазьбягаць зьнясіленьня, правільна разьмяркоўваць рэсурсы, надаваць дастатковы час аднаўленьню. Правільны выразны рэжым дня з рэжымам харчаваньня, руху і сну вельмі важны для назапашваньня сілаў. Варта перагледзець свае задачы, прыбраць тыя, што мардуюць вас, і павялічыць тыя, што сілкуюць. Завядзіце антыдзёньнік, у які першымі ўносіце паўзы, адпачынак, рэлаксацыю і толькі пасьля гэтага – справы!
 
@@ -274,7 +271,7 @@
 
 Антыстрэсавы лад жыцьця мяркуе, што большую частку дня мы арганізуем як адпачынак, вылучаем ня больш за 4-6 гадзінаў на максімальнае засяроджваньне, а астатні час – на нізкастрэсавыя заняткі. Гэта дапамагае нам быць супэрпрадуктыўнымі, замест таго каб па 10 гадзінаў хаатычна пераключацца паміж рознымі справамі. Вылучайце хаця б адзін дзень нау тыдзень на якасны адпачынак у выглядзе розных абмежаваньняў: бяз працы, без смартфона, на інфармацыйнай і дафамінавай дыеце, прысьвяціўшы яго адпачынку і разважаньням.
 
-Фрамінгемскае дасьледаваньне сэрца вызначыла сувязь паміж адпачынкамі і сардэчна-сасудзістымі захворваньнямі: адпачынак менш за тры тыдні на год прыводзіў да павелічэньня сьмяротнасьці на 37%. Нічога дзіўна ў гэтым няма, іншыя дасьледаваньні таксама пацьвярджаюць гэтыя назіраньні. Вучыцеся адпачываць эфэктыўна. Вось некалькі ідэяў для якаснага адпачынку:
+Фрамінгемскае дасьледаваньне сэрца вызначыла сувязь паміж адпачынкамі і сардэчна-сасудзістымі захворваньнямі: адпачынак менш за тры тыдні на год прыводзіў да павелічэньня сьмяротнасьці на 37\,\%. Нічога дзіўна ў гэтым няма, іншыя дасьледаваньні таксама пацьвярджаюць гэтыя назіраньні. Вучыцеся адпачываць эфэктыўна. Вось некалькі ідэяў для якаснага адпачынку:
 
 Папераджальны адпачынак супроць канчатковага. Чым раней вы пачалі адпачываць і рабіць перапынкі, тым даўжэй прапрацуеце безь зьнясіленьня. Ідэя «адпачываць толькі як усё скончу» заганная. Паўзы – гэта не марнаваньне часу, а «заточваньне касы». Падтрымлівайце ваш мозг у добрым стане, не перагружайце яго.
 
@@ -299,7 +296,7 @@
 3. Чатыры кіты рэжыму: харчаваньне, рух, сон і праца. Ці атрымліваецца ў вас іх сынхранізаваць і падтрымліваць?
 
 
-5. Добры стрэс
+\section{Добры стрэс}
 
 «Стрэс – гэта водар і смак жыцьця», – казаў Ганс Сэлье, заснавальнік вучэньня аб стрэсе. Сама энэргія стрэсу – бяз знакаў «плюс» або «мінус», стрэс як полымя – можа сагрэць, на ім можна гатаваць, але яно ж можа і пакінуць глыбокія апёкі. Ня ўсякі стрэс – гэта шкодна, карысны стрэс мае асобную назву – эўстрэс. Ён забясьпечвае нас энэргіяй, павялічвае матывацыю і ўстойлівасьць. Дасьледаваньні паказваюць, што паміж колькасьцю стрэсу і здароўем існуе U-падобная залежнасьць: малая і вялікая колькасьць стрэсу зьвязаная з горшым здароўем, а вось сярэдняя колькасьць стрэсу карысная. Людзі, якія перажылі шэраг небясьпечных сытуацыяў, шчасьлівейшыя, чым тыя, хто цалкам патрапляў пазьбегнуць стрэсавых сытуацый.
 
@@ -344,7 +341,7 @@
 3. Якія крыніцы карыснага стрэсу ёсьць у вашым жыцьці? Што яшчэ можна дадаць?
 
 
-6. Псыхалягічныя рэсурсы стрэсаўстойлівасьці
+\section{Псыхалягічныя рэсурсы стрэсаўстойлівасьці}
 
 Псыхалягічныя навыкі стрэсаўстойлівасьці – гэта наш «софт»: чым гэтыя праграмы лепш у нас прапісаныя, тым аптымальней мы спраўляемся са стрэсам, не пакутуем ад яго, а разьвіваемся зь ім. Мы ж не расьліны, не гародніна, якія прывязаны да зямлі, мы здольныя адаптавацца і мяняцца.
 
@@ -407,7 +404,7 @@
 3. Якімі копінг-стратэгіямі часьцей за ўсё вы карыстаецеся? Ці эфэктыўныя, ці адэкватныя яны?
 
 
-7. Жыцьцеўстойлівасьць
+\section{Жыцьцеўстойлівасьць}
 
 Калі копінг-стратэгіі – гэта, хутчэй, альгарытмы дзеяньня, то жыцьцеўстойлівасьць – гэта ўласьцівасьць асобы, самы важны псыхалягічны рэсурс стрэсаўстойлівасьці. Жыцьцеўстойлівасьць – гэта цэлая сыстэма перакананьняў пра сябе, сьвет і адносіны зь ім, гэта сапраўдная «мужнасьць быць» у рэальным сьвеце. З пункту гледжаньня нашае цьвёрдасьці і сілы супрацьдзеяньня мы – гэта тое, як мы змагаемся. Людзі з высокай жыцьцеўстойлівасьцю менш хварэюць і маюць лепшае здароўе незалежна ад узроўню стрэсу і нават у адсутнасьці сацыяльнай падтрымкі. Жыцьцеўстойлівасьць узмацняе ўзровень шчасьця і ўпэўненасьці ў сабе, дапамагае чалавеку вытрымліваць стрэсавую сытуацыю, захоўваючы пры гэтым унутраны балянс і гармонію, палягчае адэкватнае бачаньне сытуацыі, прызнаньне сваіх рэальных магчымасьцяў і сваёй уразьлівасьці. Менавіта гэта, у сваю чаргу, дапамагае трансфармаваць нэгатыўныя ўражаньні ў новыя магчымасьці і «рабіць ліманад зь лімонаў». Калі ж мы мінаем небясьпечныя сытуацыі, то падобная мяккасьць паступова разбурае нашу стрэсасутаўстойлівасьць.
 
@@ -443,7 +440,7 @@
 
 Самастойнасьць і працоўны стрэс. Адна з рэчаў, якія я больш за ўсё шаную ў маёй працы, – гэта ступень свабоды ў выбары таго, што і як трэба рабіць. Працоўная самастойнасьць – гэта рэч вельмі карысная для здароўя, яна значна зьніжае ўзровень стрэсу. Дасьледаваньні паказваюць, што пры параўнаньні людзей з аднолькавым статусам, заробкам і месцам працы, рызыка дэпрэсіі ніжэйшая, калі кантроль над сваёй працай вышэйшы. Таксама ёсьць цалкам выразная залежнасьць паміж рызыкай сардэчна-сасудзістых захворваньняў і працоўнай самастойнасьцю.
 
-Чым больш вы можаце кантраляваць такія аспэкты свайго працоўнага месца, як кіраваньне сьвятлом, кандыцыянэрам, магчымасьць ставіць фатаграфіі, вешаць асабістыя рэчы, ставіць расьліны, мяняць і перасоўваць мэблю, тым больш гэта карысна для здароўя. Рэалізацыя сваёй ідэнтычнасьці на працоўным месцы павышае прадуктыўнасьць на 30%. Павялічвайце сваю магчымасьць кіраваць прасторай, у якім вы знаходзіцеся. Часьцяком нам шкодзіць ня гэтулькі стрэс, колькі адчуваньне свайго бясьсільля і бездапаможнасьці, немагчымасьці паўплываць на рэчы й падзеі. А калі нізкі кантроль спалучаецца з падвышанымі патрабаваньнямі і адсутнасьцю падтрымкі, то рызыка для здароўя ўзрастае яшчэ мацней. Якая ў вас ступень працоўнай самастойнасьці? Ці спрабуеце вы яе пашырыць?
+Чым больш вы можаце кантраляваць такія аспэкты свайго працоўнага месца, як кіраваньне сьвятлом, кандыцыянэрам, магчымасьць ставіць фатаграфіі, вешаць асабістыя рэчы, ставіць расьліны, мяняць і перасоўваць мэблю, тым больш гэта карысна для здароўя. Рэалізацыя сваёй ідэнтычнасьці на працоўным месцы павышае прадуктыўнасьць на 30\,\%. Павялічвайце сваю магчымасьць кіраваць прасторай, у якім вы знаходзіцеся. Часьцяком нам шкодзіць ня гэтулькі стрэс, колькі адчуваньне свайго бясьсільля і бездапаможнасьці, немагчымасьці паўплываць на рэчы й падзеі. А калі нізкі кантроль спалучаецца з падвышанымі патрабаваньнямі і адсутнасьцю падтрымкі, то рызыка для здароўя ўзрастае яшчэ мацней. Якая ў вас ступень працоўнай самастойнасьці? Ці спрабуеце вы яе пашырыць?
 
 Выклік. Стрэс – гэта асабісты выклік, жыцьцё – гэта зьмены, мы мяняемся, пакуль мы жывыя, адаптацыя – гэта ключ да разьвіцьця: такое стаўленьне да стрэсу і магчымасьць прымаць жыцьцёвыя выклікі зьяўляецца важным чыньнікам жыцьцяздольнасьці. Калі мы бачым у стрэсе магчымасьць для разьвіцьця, гэта дазваляе нам заставацца адкрытымі ўсяму, што адбываецца.
 
@@ -466,11 +463,11 @@
 3. Паспрабуйце ўспрыняць стрэс як выклік. Чаму вы можаце навучыцца, калі яго прымеце?
 
 
-8. Аптымізм, гумар і гнуткасьць
+\section{Аптымізм, гумар і гнуткасьць}
 
 Бачачы пустую шклянку, пэсіміст злуецца, што ўжо ўсё выпілі, а аптыміст радуецца, што яшчэ не налілі, пэсіміст лічыць, што жыцьцё ідзе кульмігам, а аптыміст радуецца, што яно танчыць брэйк-данс. Пад аптымізмам мы разумеем не жыцьцё ў ілюзіях, а толькі пэўны пункт гледжаньня на факты, погляд на жыцьцё са станоўчага боку, упэўненасьць у лепшых варыянтах будучыні. Аптымізм надае ўпэўненасьць, дае пачуцьцё апоры, зьмяншае рызыку захворваньняў і можа прыкметна падаўжаць жыцьцё. Аптымізм практычны, бо дае больш варыянтаў дзеяньняў, больш магчымасьцяў.
 
-Дасьледаваньні паказалі, што працягласьць жыцьця жанчынаў-аптымістак на 15% даўжэйшая, у мужчынаў сувязь з аптымізмам была слабейшай. Таксама аптымісты радзей прастуджваюцца і маюць меншую рызыку сардэчна-сасудзістых захворваньняў. Калі мы ня верым, што лепшая будучыня магчымая, то мы нават не паварушымся, каб нешта зрабіць. Таму аптыміст бачыць зусім іншую рэальнасьць, чым пэсіміст. Можна сказаць, што разьвіцьцё аптымізму – гэта своеасаблівая трэніроўка розуму, калі нашая ўвага даўжэй затрымліваецца на станоўчых аспэктах. 
+Дасьледаваньні паказалі, што працягласьць жыцьця жанчынаў-аптымістак на 15\,\% даўжэйшая, у мужчынаў сувязь з аптымізмам была слабейшай. Таксама аптымісты радзей прастуджваюцца і маюць меншую рызыку сардэчна-сасудзістых захворваньняў. Калі мы ня верым, што лепшая будучыня магчымая, то мы нават не паварушымся, каб нешта зрабіць. Таму аптыміст бачыць зусім іншую рэальнасьць, чым пэсіміст. Можна сказаць, што разьвіцьцё аптымізму – гэта своеасаблівая трэніроўка розуму, калі нашая ўвага даўжэй затрымліваецца на станоўчых аспэктах. 
 
 На жаль, эвалюцыйна наш мозг уладкаваны так, каб зьвяртаць больш увагі і надаваць значэньне менавіта нэгатыўнаму. Зьвяртаньне ўвагі на пагрозы раней дапамагала выжываць, але цяпер адно зьніжае нашу стрэсаўстойлівасьць. Аптымізм – гэта калі мы тлумачым па-рознаму посьпехі і няўдачы. Пры гэтым зьмяняецца спосаб тлумачэньня падзеяў, галоўнымі аспэктамі якога зьяўляюцца сталасьць, унівэрсальнасьць, пэрсаналізацыя. 
 
@@ -480,15 +477,15 @@
 
 Гумар і сьмех – гэта выдатныя спосабы рэляксацыі і зьніжэньня стрэсу, а здольнасьць пасьмяяцца зь сябе – важная ўмова здароўя і практык здароўя, таму часьцей жартуйце, сьмейцеся, глядзіце больш камедый і чытайце вясёлыя кнігі. 
 
-У дасьледаваньні прагляд камедый і фільмаў жахаў прывёў да розьніцы ў 50% у ступені пашырэньня сасудаў: гумар паляпшае аслабленьне сьценак артэрыяў. Таксама сьмех спрыяе выдзяленьню бэта-эндарфінаў, зьніжае боль, маркеры запаленьня. Яшчэ ў 60-х гадах XX стагодзьдзя былі закладзеныя асновы гелотатэрапіі – тэрапіі сьмехам, а цяпер карыстаецца папулярнасьцю такі кірунак, як ёга сьмеху.
+У дасьледаваньні прагляд камедый і фільмаў жахаў прывёў да розьніцы ў 50\,\% у ступені пашырэньня сасудаў: гумар паляпшае аслабленьне сьценак артэрыяў. Таксама сьмех спрыяе выдзяленьню бэта-эндарфінаў, зьніжае боль, маркеры запаленьня. Яшчэ ў 60-х гадах XX стагодзьдзя былі закладзеныя асновы гелотатэрапіі – тэрапіі сьмехам, а цяпер карыстаецца папулярнасьцю такі кірунак, як ёга сьмеху.
 
 Калі эўрапейцы ўпершыню ўзяліся за навуковае вывучэньне ўсходніх практык, то яны былі зьбітыя з панталыку тым, што тыбэцкія будысты ўвесь час жартавалі зь іх. Эўрапейцы спрабавалі настойваць на сур'ёзнасьці, але ім патлумачылі, што пачуцьцё гумару – гэта абавязковая ўмова разуменьня складаных мэдытатыўных практык. І сёньня можна ўбачыць, як людзі «вельмі сур'ёзна» мэдытуюць або займаюцца здаровым харчаваньнем, што прыкметна павышае рызыку артарэксіі. 
 
-Як зьвязаныя гумар і ўсьвядомленасьць? Абодва яны патрабуюць разгляду сытуацыі збоку, погляд мэта-назіральніка. А гэта магчыма пры актыўнай прэфрантальнай кары і пасавай зьвіліне, што ўжо гаворыць пра здароўе і зьніжэньне стрэсу. Калі вам ня сьмешна ані каліўца, то вы не ўсьвядомленыя ў гэтай сытуацыі ні на грам. Мы часта сьмяёмся без нагоды, і гэта абсалютна нармальна, бо толькі 10% сьмеху выклікана жартамі. Цікава, што гумар пры старэньні і нэўрадэгенэратыўных захворваньнях часта мяняецца самым першым, як складаная мазгавая функцыя. Таму зьмена пачуцьця гумару можа быць трывожным сымптомам.
+Як зьвязаныя гумар і ўсьвядомленасьць? Абодва яны патрабуюць разгляду сытуацыі збоку, погляд мэта-назіральніка. А гэта магчыма пры актыўнай прэфрантальнай кары і пасавай зьвіліне, што ўжо гаворыць пра здароўе і зьніжэньне стрэсу. Калі вам ня сьмешна ані каліўца, то вы не ўсьвядомленыя ў гэтай сытуацыі ні на грам. Мы часта сьмяёмся без нагоды, і гэта абсалютна нармальна, бо толькі 10\,\% сьмеху выклікана жартамі. Цікава, што гумар пры старэньні і нэўрадэгенэратыўных захворваньнях часта мяняецца самым першым, як складаная мазгавая функцыя. Таму зьмена пачуцьця гумару можа быць трывожным сымптомам.
 
 Сьмех расслабляе. Яшчэ філёзаф Імануіл Кант прыкмеціў: «Сьмех ёсьць афэкт ад раптоўнага пераўтварэньня напружанага чаканьня ў нішто». Сьмех робіць страшнае нястрашным. Таму многія людзі панічна баяцца сьмеху, баючыся, што сьмех пазбавіць іх «аўтарытэту». Для жанчынаў пачуцьцё гумару зьяўляецца важным крытэрам выбару партнёра. Сьмех у пары дазваляе партнёрам хутчэй здымаць напружаньне пасьля цяжкіх падзей, і ў цэлым сумеснае жыцьцё такой пары звычайна працягваецца даўжэй. Сьмех збліжае – гэта выдатная разрадка сытуацыі і сацыяльная эмоцыя, якая гуртуе людзей незалежна ад таго, ці быў жарт сьмешны. Сьмех – гэта рэальны індыкатар блізкасьці.
 
-Сьмех карысны для здароўя. Ён зьніжае ўзровень картызолу, паляпшае імунную функцыю, падаўжае жыцьцё як здаровым, так і хворым. Згодна з дасьледаваньнямі, сьмяротнасьць сярод хворых, якія маюць добрае пачуцьцё гумару, ніжэйшая на 31%. 
+Сьмех карысны для здароўя. Ён зьніжае ўзровень картызолу, паляпшае імунную функцыю, падаўжае жыцьцё як здаровым, так і хворым. Згодна з дасьледаваньнямі, сьмяротнасьць сярод хворых, якія маюць добрае пачуцьцё гумару, ніжэйшая на 31\,\%. 
 
 У дасьледаваньнях паказана, што сьмех паляпшае адчувальнасьць да інсуліну: дыябэтыкі і здаровыя людзі елі, а затым сядзелі на нуднай лекцыі ці на камэдыйным шоў. Пасьля шоў нават у дыябэтыкаў уздым цукру быў мінімальны ў параўнаньні з тымі, хто слухаў лекцыю. У іншай працы паказана спрыяльны ўплыў сьмеху на рэнін-ангіятэнзінавую сыстэму: сьмех зьніжаў рэнін плазмы. З узростам мы сьмяёмся ўсё менш: дзіця сьмяецца ў 20 разоў больш за дарослага. Страта гумару гаворыць пра непамысныя зьмены асобы. Зьмена пачуцьця гумару – прыкмета шматлікіх парушэньняў, напрыклад старэньня. 
 
@@ -537,7 +534,7 @@
 3. Заплянуйце дзень сьмехатэрапіі. Якія жарты, камэдыі, комікі і шоў сьмяшаць вас мацней за ўсё?
 
 
-9. Цялесныя рэсурсы стрэсаўстойлівасьці. Вагус і аксытацын
+\section{Цялесныя рэсурсы стрэсаўстойлівасьці. Вагус і аксытацын}
 
 Калі я вяду курс «Стрэсаўстойлівасьць», я цытую Айнштэйна, які казаў, што «немагчыма вырашыць праблему на тым жа ўзроўні, на якім яна ўзьнікла». Для таго каб даць рады стрэсу, можна падысьці «зьверху», праз псыхічныя рэсурсы стрэсаўстойлівасьці, якія мы разабралі. Але можна падысьці і «зьнізу», узьдзейнічаючы на цела. Аптымальна, вядома, спалучаць гэтыя падыходы.
 
@@ -561,7 +558,7 @@
 
 Існуе некалькі гіпотэзаў аб уплыве вагуса на здароўе. Тэорыя Тэера кажа, што вагус уплывае на стрэсаўстойлівасьць і эмацыйны стан і можа вызначаць працягласьць жыцьця і сярэдні IQ. Тэорыя Трэйсі вястуе, што вагус прыгнятае сыстэмнае хранічнае запаленьне і тым самым карысны. Мэдыятарам парасымпатыйнай сыстэмы зьяўляецца ацэтылхалін, які можа зьніжаць узровень запаленьня і рызыку многіх захворваньняў, ад дэпрэсіі да аўтаімунных.
 
-Алькалёіды, якія ўтрымліваюцца ў пасьлёнавых (перац, таматы, баклажаны і інш.), стымулююць тонус вагуса і зьніжаюць узровень запаленьня ў арганізьме. Алькалёіды з пасьлёнавых падобныя па ўзьдзеяньні на нікатынам. Навукоўцы ўсталявалі, што нікатын зьніжае рызыку хваробы Паркінсана, памяншае праявы дэфіцыту ўвагі і гіпэрактыўнасьці, а таксама частасьць і выяўленасьць сымптомаў шэрагу аўтаімунных хваробаў. Узьдзеяньне нікатыну на дафамінавыя рэцэптары, якія гінуць пры хваробе Паркінсона, даведзенае як для людзей, так і для жывёл. Кожная порцыя пасьлёнавых на 31% можа зьніжаць рызыку хваробы Паркінсана. Наймацнейшы ахоўны эфэкт назіраецца ў салодкага перцу: хто есьць перцы пяць разоў на тыдзень, захворвае на 50% радзей, чым тыя, хто ўжывае іх менш разу на тыдзень.
+Алькалёіды, якія ўтрымліваюцца ў пасьлёнавых (перац, таматы, баклажаны і інш.), стымулююць тонус вагуса і зьніжаюць узровень запаленьня ў арганізьме. Алькалёіды з пасьлёнавых падобныя па ўзьдзеяньні на нікатынам. Навукоўцы ўсталявалі, што нікатын зьніжае рызыку хваробы Паркінсана, памяншае праявы дэфіцыту ўвагі і гіпэрактыўнасьці, а таксама частасьць і выяўленасьць сымптомаў шэрагу аўтаімунных хваробаў. Узьдзеяньне нікатыну на дафамінавыя рэцэптары, якія гінуць пры хваробе Паркінсона, даведзенае як для людзей, так і для жывёл. Кожная порцыя пасьлёнавых на 31\,\% можа зьніжаць рызыку хваробы Паркінсана. Наймацнейшы ахоўны эфэкт назіраецца ў салодкага перцу: хто есьць перцы пяць разоў на тыдзень, захворвае на 50\,\% радзей, чым тыя, хто ўжывае іх менш разу на тыдзень.
 
 Тонус вагуса ўплывае і на нашыя сацыяльныя паводзіны: чым больш у нас сацыяльных кантактаў, чым больш пазітыву ў камунікацыі, тым вышэйшы тонус вагуса. А чым вышэйшы тонус, тым больш мы маем камунікуем, -- узьнікае чарговае замкнёнае кола. Нізкі тонус вагуса зьвязаны з кепскім настроем і пачуцьцём адзіноты. Вызначыць тонус вагуса можна, напрыклад, ацэньваючы ўзровень дыхальнай арытміі – гэта невялікае павышэньне пульсу пры ўдыху і зьніжэньне на выдыху. Зручнейшым зьяўляецца вымярэньне тонусу вагуса праз варыябельнасьць пульсу, што даступна ў шматлікіх праграмах. Чым больш у нас сацыяльных кантактаў, тым вышэйшы тонус вагуса. Нізкі тонус вагуса зьвязаны з кепскім настроем і адчуваньнем самоты.
 
@@ -569,7 +566,7 @@
 
 Камплімэнты, абдымкі, знаходжаньне ў бясьпечным асяродзьдзі, погляд вочы ў вочы, пацалункі, абдымкі, сэкс. Паціскаць можна і цацкі, і хатніх жывёл, а можна і паплакаць – гэта таксама актывуе вагус. Пацалунак ня меншы за 6 сэкундаў, абдымкі ня меншыя за 20 сэкундаў будуць найболей карысныя.
 
-Рэгулярная фізычная актыўнасьць. Рухальная актыўнасьць імітуе натуральны эвалюцыйны мэханізм «бі--бяжы» і дапамагае прыбраць лішнія глюкозу і тлушчы, якія цыркулююць у крыві. Для спартоўцаў і аматараў характэрны высокі тонус вагуса. Цяглічная актыўнасьць павышае ўзровень нэўратрафічнага чыньніка BDNF, што павышае нэўраплястычнасьць і нашыя шанцы супрацьстаяць стрэсу, разьвіваць новыя навыкі. На гэта лепш за ўсё працуюць аэробныя практыкаваньні з 60-70% узмацненьнем рытму сэрца ня менш за 30 хвілінаў. Зрэшты, пасуе і кароткая інтэнсіўная нагрузка: тры хвіліны спрынту на 20% павялічваюць кагнітыўныя здольнасьці. Наагул скачкі, спантанная актыўнасьць і танцы паднімаюць BDNF нашмат мацней у параўнаньні з фітнэсам.
+Рэгулярная фізычная актыўнасьць. Рухальная актыўнасьць імітуе натуральны эвалюцыйны мэханізм «бі--бяжы» і дапамагае прыбраць лішнія глюкозу і тлушчы, якія цыркулююць у крыві. Для спартоўцаў і аматараў характэрны высокі тонус вагуса. Цяглічная актыўнасьць павышае ўзровень нэўратрафічнага чыньніка BDNF, што павышае нэўраплястычнасьць і нашыя шанцы супрацьстаяць стрэсу, разьвіваць новыя навыкі. На гэта лепш за ўсё працуюць аэробныя практыкаваньні з 60-70\,\% узмацненьнем рытму сэрца ня менш за 30 хвілінаў. Зрэшты, пасуе і кароткая інтэнсіўная нагрузка: тры хвіліны спрынту на 20\,\% павялічваюць кагнітыўныя здольнасьці. Наагул скачкі, спантанная актыўнасьць і танцы паднімаюць BDNF нашмат мацней у параўнаньні з фітнэсам.
 
 Цяглічны тонус. Пры стрэсе назіраецца ўзмацненьне цяглічнага тонусу, а такі стан заціснутасьці некамфортны. Цяглічныя рэляксацыі і расьцяжкі могуць дапамагчы з гэтым. 
 
@@ -593,9 +590,9 @@
 
 Харчаваньне. Частае дробавае харчаваньне, вялікая колькасьць бялку і цукру, лішак высокаглікемічных вугляводаў стымулююць mTOR і спрыяюць павелічэньню актыўнасьці сымпатыйнай сыстэмы. Таму цалкам можна сказаць, што "ты такі нэрвовы празь мяса". Дбайнае перажоўваньне, нізкая ўдзельная шчыльнасьць ежы (агародніна, зеляніна), ежа ў сямейным або сяброўскім коле, рэгулярны фастынг, адсутнасьць перакусаў, вялікая доля тлустай ежы спрыяюць паляпшэньню тонусу вагуса. Ёсьць зьвесткі, што даданьне амэга-3, цынку, лакта- і біфідабактерій, пра- і прэбіётыкаў можа таксама дапамагаць.
 
-Загрызіце свой стрэс! На курсе, прысьвечаным харчаваньню, я шмат расказваю пра важнасьць жаваньня, на стрэсаўстойлівасьць гэты працэс таксама ўплывае. Жаваньне зьяўляецца дзейснай стрэсавай копінг-стратэгій, а пры лішку стрэсу часта назіраецца бруксізм – скрыгат зубамі ў сьне, які павялічвае рызыку карыесу ды іншых праблемаў. Дасьледаваньні паказваюць, што жаваньне зьніжае ўзровень выдзяленьня норадрэналіну ў мігдаліне, узроўні АКТГ і картызолу, таксама зьніжае актыўнасьць стрэсавай восі, дзейнічаючы праз картызолавыя рэцэптары ў гіпакампе, і кагнітыўны дэфіцыт, выкліканы стрэсавым пашкоджаньнем гіпакампа. Чым больш інтэнсіўнае жаваньне, тым больш прыкметна зьніжаецца ўзровень картызолу і адрэналіну: хуткае жаваньне зьніжае ўзровень картызолу на 26% за 20 хвілінаў. Што жаваць? Аптымальна гэта цьвёрдая ежа, напрыклад, морква ці яблык, – усе вынікі можна перанесьці й на жуйку.
+Загрызіце свой стрэс! На курсе, прысьвечаным харчаваньню, я шмат расказваю пра важнасьць жаваньня, на стрэсаўстойлівасьць гэты працэс таксама ўплывае. Жаваньне зьяўляецца дзейснай стрэсавай копінг-стратэгій, а пры лішку стрэсу часта назіраецца бруксізм – скрыгат зубамі ў сьне, які павялічвае рызыку карыесу ды іншых праблемаў. Дасьледаваньні паказваюць, што жаваньне зьніжае ўзровень выдзяленьня норадрэналіну ў мігдаліне, узроўні АКТГ і картызолу, таксама зьніжае актыўнасьць стрэсавай восі, дзейнічаючы праз картызолавыя рэцэптары ў гіпакампе, і кагнітыўны дэфіцыт, выкліканы стрэсавым пашкоджаньнем гіпакампа. Чым больш інтэнсіўнае жаваньне, тым больш прыкметна зьніжаецца ўзровень картызолу і адрэналіну: хуткае жаваньне зьніжае ўзровень картызолу на 26\,\% за 20 хвілінаў. Што жаваць? Аптымальна гэта цьвёрдая ежа, напрыклад, морква ці яблык, – усе вынікі можна перанесьці й на жуйку.
 
-Завядзіце сабаку. Наяўнасьць хатніх жывёлаў мае куды больш дадатных, чым адмоўных аспэктаў. Мы можам казаць нават пра PAT, або Реts As Therapy, дзе фэлінатэрапія – лячэньне коткамі, а каністатэрапія – лячэньне сабакамі. Сацыяльнае ўзьдзеяньне зьвязанае з тым, што хатнія жывёлы стымулююць камунікацыю, клопат, цялесныя кантакты, і гэта станоўча ўплывае на стрэсаўстойлівасьць. Так, рызыка інфаркту ва ўладальнікаў катоў на 30% меншая, чым у тых, хто жыве бяз хатніх жывёл. Сабакі таксама станоўча ўплываюць як на зьніжэньне рызыкі сардэчна-сасудзістых захворваньняў, так і на артэрыяльны ціск і нават на ліпідны профіль крыві. Дастаткова некалькіх хвілінаў камунікацыі паміж гаспадаром і сабакам для зьніжэньня ўзроўню картызолу – і ў сабакі, дарэчы, таксама.
+Завядзіце сабаку. Наяўнасьць хатніх жывёлаў мае куды больш дадатных, чым адмоўных аспэктаў. Мы можам казаць нават пра PAT, або Реts As Therapy, дзе фэлінатэрапія – лячэньне коткамі, а каністатэрапія – лячэньне сабакамі. Сацыяльнае ўзьдзеяньне зьвязанае з тым, што хатнія жывёлы стымулююць камунікацыю, клопат, цялесныя кантакты, і гэта станоўча ўплывае на стрэсаўстойлівасьць. Так, рызыка інфаркту ва ўладальнікаў катоў на 30\,\% меншая, чым у тых, хто жыве бяз хатніх жывёл. Сабакі таксама станоўча ўплываюць як на зьніжэньне рызыкі сардэчна-сасудзістых захворваньняў, так і на артэрыяльны ціск і нават на ліпідны профіль крыві. Дастаткова некалькіх хвілінаў камунікацыі паміж гаспадаром і сабакам для зьніжэньня ўзроўню картызолу – і ў сабакі, дарэчы, таксама.
 
 Пытаньні і заданьні
 
