--- a/willpower/chapter9.tex
+++ b/willpower/chapter9.tex
@@ -1,9 +1,6 @@
-Разьдзел 9. 
+\chapter{Сацыяльны статус}
 
-Сацыяльны статус
-
-
-1. Воля да сілы
+\section{Воля да сілы}
 
 Старажытнагрэцкі філёзаф Плятон напісаў: «Найвялікшае дабро – здароўе, на другім месцы – прыгажосьць, на трэцім – багацьце». З тых даўніх часоў людзі не асабліва зьмяніліся: як толькі чалавек здавальняе базавыя патрэбы ў ежы і сьне, ён пераключаецца на здавальненьне сваіх сацыяльных запатрабаваньняў. Бо для нас, як істот сацыяльных, больш высокі статус значыць большы доступ да рэсурсаў, а значыць і большую імавернасьць выжываньня. Думкі пра кар'еру, дастатак і зьдзяйсьненьні заўсёды прыемныя і матывуюць нас.
 
@@ -34,7 +31,7 @@
 3. Ці хочаце вы стаць багацейшымі, прыгажэйшымі, разумнейшымі? Што вы для гэтага зрабілі? Ці сталі вы багацейшымі, прыгажэйшымі, разумнейшымі за мінулы год?
 
 
-2. Сацыяльны статус і герархія
+\section{Сацыяльны статус і герархія}
 
 Усе мы падсьвядома вельмі дакладна ўмеем вызначаць статус па вонкавым выглядзе, паставе, голасу, міміцы і да т.п. Нават па фатаграфіі з абліччам – без кантэксту адзеньня, аксэсуараў і інтэр'еру – мы можам ацаніць яго. З чаго ж складаецца статус? Ён уключае становішча ў грамадстве, узровень адукацыі, улады, даходу і шэраг іншых паказьнікаў. У чалавека ёсьць як прыроджаны статус (пол, раса, нацыянальнасьць і да т.п.), так і набыты, які дасягаецца з дапамогай асабістых намаганьняў. Статус шчыльна зьвязаны з выжываньнем і ўзроўнем стрэсу, а добры прыбытак дазваляе камфортней жыць, лепей харчавацца, больш часу надаваць здароўю і выгляду, вытрачаць сродкі на даражэйшае лячэньне і т.п.
 
@@ -69,13 +66,13 @@
 3. Ці лёгка вам вытрымліваць сутыкненьні і канфлікты?
 
 
-3. Уплыў на здароўе. Чаму ў пераможцаў хутчэй гояцца раны?
+\section{Уплыў на здароўе. Чаму ў пераможцаў хутчэй гояцца раны?}
 
 Высакастатусныя жывёлы адрозьніваюцца дагледжанасьцю, ярчэйшай афарбоўкай, буйнейшымі грабянямі, ікламі, плаўнікамі і да т.п. Гэтак жа і ў людзей – чым вышэйшы статус, тым менш у яго праблемаў са здароўем, лепшы выгляд і вышэйшая працягласьць жыцьця. Сацыяльны статус – гэта незалежны рэсурс здароўя чалавека, і яго ўплыў мы часта недаацэньваем. 
 
 Сацыяльны статус уплывае на стан здароўя мноствам спосабаў. З аднаго боку, гэта доступ да лепшай мэдыцыны, умоваў жыцьця (паветра, дом, шум), меншы ўзровень стрэсу, больш здаровы лад жыцьця і сацыяльнага асяродзьдзя і т.п. У дасьледаваньнях вывучаюцца канкрэтныя мэханізмы ўплыву сацыяльнага статусу на актыўнасьць сымпатаадрэналавай сыстэмы, імуннай сыстэмы і нават актыўнасьць генаў.
 
-Мозг і статус. Сацыяльны статус пачынае ўплываць на нас з самага дзяцінства, нават нараджэньне ў беднай сям'і аўтаматычна павялічвае рызыку для здароўя. Дзеці зь бяднейшых сем'яў горш вучацца, іх маўленьне разьвіваецца павольней. Нізкі сацыяльны статус бацькоў уплывае на мозг: вядзе да зьмены абмену сэратаніну, што павялічвае рызыку дэпрэсіі, павялічвае актыўнасьць мігдалападобнага цела, а гэта, у сваю чаргу, павялічвае трывожнасьць і зьмяншае стрэсаўстойлівасьць. У дзяцей, бацькі якіх атрымалі вышэйшую адукацыю, плошча кары галаўнога мозга на 3% большая ў параўнаньні зь дзецьмі, бацькі якіх вышэйшай адукацыі не атрымалі.
+Мозг і статус. Сацыяльны статус пачынае ўплываць на нас з самага дзяцінства, нават нараджэньне ў беднай сям'і аўтаматычна павялічвае рызыку для здароўя. Дзеці зь бяднейшых сем'яў горш вучацца, іх маўленьне разьвіваецца павольней. Нізкі сацыяльны статус бацькоў уплывае на мозг: вядзе да зьмены абмену сэратаніну, што павялічвае рызыку дэпрэсіі, павялічвае актыўнасьць мігдалападобнага цела, а гэта, у сваю чаргу, павялічвае трывожнасьць і зьмяншае стрэсаўстойлівасьць. У дзяцей, бацькі якіх атрымалі вышэйшую адукацыю, плошча кары галаўнога мозга на 3\,\% большая ў параўнаньні зь дзецьмі, бацькі якіх вышэйшай адукацыі не атрымалі.
 
 Павышэньне статусу, атрыманьне славы і прызнаньня – гэтае пачуцьцё любяць усе людзі ва ўсім сьвеце. Рост статусу павышае ўзровень дафаміну, сэратаніну і тэстастэрону, а картызол пры гэтым зьніжаецца. Калі ўзровень дафаміну ў галаўным мозгу павялічваецца, чалавек ясьней думае, у яго вышэйшыя актыўнасьць прэфрантальнай кары, нэўраплястычнасьць і кантроль эмоцыяў, канцэнтрацыя. Гэта робіць яго яшчэ больш актыўным, фармуючы станоўчую зваротную сувязь, як у прымаўцы: "Бедныя бяднеюць, а багатыя багацеюць".
 
@@ -108,7 +105,7 @@
 3. Зрабіце сабе куток пераможцы. Зьбярыце ўсе граматы, дыплёмы, фота, усе доказы пасьпяховасьці з самых раньніх гадоў.
 
 
-4. Псыхалёгія сацыяльнага статусу
+\section{Псыхалёгія сацыяльнага статусу}
 
 Нізкі статус выракае нас на нізкія даходы, адсутнасьць магчымасьці выбіраць працу, асяродзьдзе, спосаб баўленьня часу. Адчуваньне безвыходнасьці, якое ўзьнікае пры немагчымасьці зьмяніць свой статус, штурхае на пошукі дафамінавай «халявы»: людзі больш кураць, п'юць і ў цэлым менш клапоцяцца пра здароўе, іх гарызонт плянаваньня звужаецца. Навошта ж жыць, калі надзеі няма? Нізкастатусныя людзі часьцей сутыкаюцца з прыніжэньнем і цкаваньнем, у іх часьцей узьнікаюць кагнітыўныя парушэньні, сардэчна-сасудзістыя захворваньні, зьніжэньне фэртыльнасьці.
 
@@ -163,11 +160,11 @@
 3. Ці падабаецца вам камандаваць? Якія эмоцыі вы пры гэтым адчуваеце?
 
 
-5. Праца і даход
+\section{Праца і даход}
 
 Ваша праца і ўзровень даходу – важная частка статусу. Першачарговы статус для большасьці людзей – прафэсійны. Таму нізкая пасада, непрэстыжная малааплатная пазыцыя, страта працы, выхад на пэнсію зьніжаюць сацыяльны статус. А вось прэстыжная праца, павышэньне на пасадзе, прафэсійная кампэтэнтнасьць павышаюць ня толькі статус, але й самаацэнку.
 
-Праца – гэта ня проста даход, але й статус, структураваньне часу, калектыў, самаідэнтыфікацыя. Таму яе страта зьмяншае і задаволенасьць жыцьцём. Беспрацоўе павышае рызыку заўчаснае сьмерці на 63%, прычым эфэкт мацнейшы для мужчынаў маладзейшых за 50 гадоў. На 60% павялічваецца рызыка інсульту, у два разы часьцей здараюцца праблемы са здароўем, у тым ліку анкалёгія і псыхічныя захворваньні.
+Праца – гэта ня проста даход, але й статус, структураваньне часу, калектыў, самаідэнтыфікацыя. Таму яе страта зьмяншае і задаволенасьць жыцьцём. Беспрацоўе павышае рызыку заўчаснае сьмерці на 63\,\%, прычым эфэкт мацнейшы для мужчынаў маладзейшых за 50 гадоў. На 60\,\% павялічваецца рызыка інсульту, у два разы часьцей здараюцца праблемы са здароўем, у тым ліку анкалёгія і псыхічныя захворваньні.
 
 Статус, прама ці ўскосна, зьвязаны з вашымі рэсурсамі. Чым большымі рэсурсамі вы валодаеце, незалежна ад іх разнавіднасьці – абаяньне, харызма, уплыў, улада, грошы, сіла, рэдкія навыкі або здольнасьці, то бок усё тое, што адрозьнівае вас ад навакольных, – тым вышэйшы будзе ваш статус. Любыя дзеяньні, якія вядуць да росту вашае сілы й рэсурсаў, добрыя і карысныя. Ніцшэ пісаў, што «каштоўнасьць – гэта найвялікшая колькасьць улады (перадусім над сабой), якую чалавек можа засвоіць».
 
@@ -185,7 +182,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Але ці заўжды гэта адбываецца менавіта так? Мы ведаем, што фізыялягічнае ўзьдзеяньне стрэсу шмат у чым залежыць ад яго ўспрыманьня чалавекам і магчымасьці справіцца зь ім. Калі ёсьць рэсурс падтрымкі, то стрэс не выклікае разьвіцьця вывучанай бездапаможнасьці. У 1955 годзе Эмі Вэрнэр і Рут Сміт запусьцілі дасьледаваньне, у якім падрабязна вывучылі ўсіх дзяцей, народжаных на адной высьпе на працягу 40 гадоў. Яны вылучылі групу рызыкі, а менавіта дзяцей, чые бацькі былі беднымі, часта выпівалі, мелі псыхічныя хваробы, білі іх. Навукоўцы былі ўпэўненыя, што з гэтых дзяцей не атрымаецца нічога талковага.
 
-Аднак 30% з групы рызыкі захавалі здароўе і дабіліся посьпеху ў жыцьці, нягледзячы на цяжкае дзяцінства. Навукоўцы назвалі іх псыхіку "элястычнай" і змаглі вылучыць умовы такой адаптацыі. Такія дзеці эмацыйна адключаліся ад праблемаў бацькоў, умелі актыўна вырашаць свае праблемы, былі экстравэртамі і больш размаўлялі зь іншымі людзьмі, маглі пазітыўна зірнуць на траўмавальныя падзеі.
+Аднак 30\,\% з групы рызыкі захавалі здароўе і дабіліся посьпеху ў жыцьці, нягледзячы на цяжкае дзяцінства. Навукоўцы назвалі іх псыхіку "элястычнай" і змаглі вылучыць умовы такой адаптацыі. Такія дзеці эмацыйна адключаліся ад праблемаў бацькоў, умелі актыўна вырашаць свае праблемы, былі экстравэртамі і больш размаўлялі зь іншымі людзьмі, маглі пазітыўна зірнуць на траўмавальныя падзеі.
 
 Гэтыя дзеці мелі больш крыніц эмацыйнай падтрымкі ад братоў і сясьцёр, іншых людзей на працягу дзяцінства і падлеткавага пэрыяду. У іх была апора і ўзор для перайманьня з бліжэйшага асяродзьдзя (настаўнік, суседзі, сваякі), яны мелі шырэйшае камунікацыйнае кола, былі мяккімі, дапытлівымі і прыязнымі з навакольнымі, але пры гэтым самастойнымі і прынцыповымі ў дасягненьні сваіх мэтаў. Ужо ў падлеткавым узросьце на першае месца ў прыярытэтах яны ставілі кар'еру і працу, у той час як іх аднагодкі нават ня думалі пра гэта.
 
@@ -200,19 +197,19 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 3. Якімі капіталамі вы валодаеце і як іх выкарыстоўваеце? Ці лічыце вы сваю фінансавую пісьменнасьць дастатковай?
 
 
-6. Адукацыя
+\section{Адукацыя}
 
 Быць разумнымі цяпер модна, сэксуальна і карысна для здароўя. Чым вышэйшая навуковая ступень, тым даўжэй жыве яе ўладальнік. Кандыдаты навук жывуць даўжэй за тых, у каго няма вучонай ступені, дактары навук – даўжэй за кандыдатаў, акадэмікі зьяўляюцца самымі доўгажыхарамі. Павышэньне ўзроўню адукацыі дапамагае павышаць навыкі і прафэсійную кампэтэнцыю, упэўненасьць у сабе, пашыраць кругагляд, знаёміцца з новымі людзьмі і нясе безьліч іншых плюсаў. Сучасны падыход мяркуе пастаянную бесьперапынную адукацыю на працягу ўсяго жыцьця. Стаўленьне да яе закладаецца зь дзяцінства – так, па колькасьці кніг у доме дзіцяці можна прадказаць яго статус і будучы ўзровень адукацыі.
 
-Людзі з вышэйшай адукацыяй у ЗША жывуць даўжэй за тых, хто ня мае яе, у іх меншая рызыка дэпрэсіі, трывожных разладаў, цукроўкі 2 тыпу, бранхіяльнай астмы і сардэчна-сасудзістых захворваньняў. Кожны год дадатковага навучаньня павялічвае заробак на 6% і павялічвае працягласьць жыцьця на 1 год.
+Людзі з вышэйшай адукацыяй у ЗША жывуць даўжэй за тых, хто ня мае яе, у іх меншая рызыка дэпрэсіі, трывожных разладаў, цукроўкі 2 тыпу, бранхіяльнай астмы і сардэчна-сасудзістых захворваньняў. Кожны год дадатковага навучаньня павялічвае заробак на 6\,\% і павялічвае працягласьць жыцьця на 1 год.
 
 Больш адукаваныя людзі ў цэлым лепш клапоцяцца аб здароўі, часьцей займаюцца прафіляктыкай і маюць менш шкодных звычак. Вучоба трэніруе мозг і можа перадухіляць ці запавольваць разьвіцьцё нэўрадэгенэратыўных захворваньняў. Людзі з больш высокім узроўнем адукацыі лепей даюць рады эмоцыям, прымаюць больш здаровыя рашэньні, эфэктыўней плянуюць жыцьцё, маюць больш здаровыя стасункі ў сям'і і меншы ўзровень разводаў.
 
-Апошнім часам людзі, якія маюць высокі статус, усё больш пазьбягаюць "дэманстратыўнага спажываньня" і купляюць усё менш рэчаў. Пачынаючы з 2007 года зьвесткі амэрыканскага дасьледаваньня спажывецкіх тратаў паказваюць, што самыя багатыя людзі краіны (1% насельніцтва, які зарабляе ў раёне 300 тысячаў даляраў на год і вышэй) сталі вытрачаць значна менш на матэрыяльныя даброты, у той час як прадстаўнікі сярэдняга класа (якія зарабляюць прыкладна 70 тысячаў даляраў на год) выдаткоўваюць столькі ж, колькі раней, і больш за тое – іх выдаткі на прадметы раскошы паступова растуць.
+Апошнім часам людзі, якія маюць высокі статус, усё больш пазьбягаюць "дэманстратыўнага спажываньня" і купляюць усё менш рэчаў. Пачынаючы з 2007 года зьвесткі амэрыканскага дасьледаваньня спажывецкіх тратаў паказваюць, што самыя багатыя людзі краіны (1\,\% насельніцтва, які зарабляе ў раёне 300 тысячаў даляраў на год і вышэй) сталі вытрачаць значна менш на матэрыяльныя даброты, у той час як прадстаўнікі сярэдняга класа (якія зарабляюць прыкладна 70 тысячаў даляраў на год) выдаткоўваюць столькі ж, колькі раней, і больш за тое – іх выдаткі на прадметы раскошы паступова растуць.
 
 На што ж выдаткоўваюцца багатыя? Статус эліты замацоўваецца культурным капіталам, і "новыя" багатыя аддаюць перавагу траце грошай ня столькі на прадметы раскошы, колькі на адукацыю, здароўе, паслугі ды інвэстыцыі ў сфэру разьвіцьця чалавечага патэнцыялу.
 
-«Недэманстратыўнае спажываньне» новага клясу мяркуе значныя выдаткі на адукацыю – сюды сыходзіць амаль 6% расходаў найбагацейшых амэрыканцаў. Для параўнаньня: у прадстаўнікоў сярэдняга класа доля гэтых расходаў крыху перавышае 1%. Пачынаючы з 1996 года выдаткі амэрыканскай эліты на адукацыю вырасьлі ў 3,5 разы, а ў сярэдняга класа не зьмяніліся наогул. Адукацыя даражэе: за дзесяць гадоў, з 2003--2013 гг., кошт навучаньня ў каледжы вырас на 80%, у той час як кошты на жаночае адзеньне павысіліся толькі на 6%.
+«Недэманстратыўнае спажываньне» новага клясу мяркуе значныя выдаткі на адукацыю – сюды сыходзіць амаль 6\,\% расходаў найбагацейшых амэрыканцаў. Для параўнаньня: у прадстаўнікоў сярэдняга класа доля гэтых расходаў крыху перавышае 1\,\%. Пачынаючы з 1996 года выдаткі амэрыканскай эліты на адукацыю вырасьлі ў 3,5 разы, а ў сярэдняга класа не зьмяніліся наогул. Адукацыя даражэе: за дзесяць гадоў, з 2003--2013 гг., кошт навучаньня ў каледжы вырас на 80\,\%, у той час як кошты на жаночае адзеньне павысіліся толькі на 6\,\%.
 
 Здаровае харчаваньне, фізычная актыўнасьць, тэхнікі паляпшэньня работы мозгу, зьніжэньня стрэсу, а таксама дасьведчанасьць у гэтых пытаньнях ужо дае вам агульныя тэмы для размоў і своеасаблівы сацыяльны статус. Ясная рэч, гэтыя інвэстыцыі не выпадковыя, і такое ўкладаньне грошай істотна ўплывае на якасьць жыцьця таго, хто гэта робіць. Акрамя таго, гэта павышае шанцы на жыцьцёвы посьпех для дзяцей новай эліты.
 
@@ -227,11 +224,11 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 3. Чаму б вы хацелі навучыцца, якія навыкі займець?
 
 
-7. Прыгажосьць і прывабнасьць
+\section{Прыгажосьць і прывабнасьць}
 
 Многія людзі, якія зьвяртаюцца да мяне па здароўе, маюць на ўвазе ў першую чаргу прывабнасьць. Мы так уладкаваныя, што для нашага мозгу ўсё прыгожае будзе здаровым. Літаральна за 13 мілісэкундаў мы складаем сваё першае ўражаньне пра чалавека: наш мозг безумоўна верыць прыгажосьці, і нам здаецца, што прывабнейшы чалавек разумнейшы, больш сумленны і здольны, нават без належных падставаў для гэтага. Прыгажосьць для мозгу – гэта прыкмета здароўя, фэртыльнасьці і больш высокіх разумовых і фізычных здольнасьцяў.
 
-Людзі, якія знаходзяцца ў верхняй траціне па прывабнасьці, зарабляюць значна больш, чым астатнія. Працадаўцы больш давяраюць больш сымпатычным мужчынам і жанчынам і ахвотна прасоўваюць іх жа па службе. Эфэкт арэолу прывабнасьці настолькі моцны, што вядзе ў 10% выпадкаў да павышэньня зарплаты. А калі падняць судовыя справы, то можна ўбачыць, што прыгажуны і прыгажуні атрымліваюць значна меншыя тэрміны за свае злачынствы. Прыгажосьць – гэта сыгнал статусу, і наадварот: статусныя людзі аўтаматычна ўспрымаюцца як больш прыгожыя.
+Людзі, якія знаходзяцца ў верхняй траціне па прывабнасьці, зарабляюць значна больш, чым астатнія. Працадаўцы больш давяраюць больш сымпатычным мужчынам і жанчынам і ахвотна прасоўваюць іх жа па службе. Эфэкт арэолу прывабнасьці настолькі моцны, што вядзе ў 10\,\% выпадкаў да павышэньня зарплаты. А калі падняць судовыя справы, то можна ўбачыць, што прыгажуны і прыгажуні атрымліваюць значна меншыя тэрміны за свае злачынствы. Прыгажосьць – гэта сыгнал статусу, і наадварот: статусныя людзі аўтаматычна ўспрымаюцца як больш прыгожыя.
 
 Нам здаецца прыгожым усё, што гаворыць пра здароўе і высокі статус, таму крытэры прыгажосьці вар'іраваліся ў залежнасьці ад гістарычнай сытуацыі і кантэксту. Напрыклад, у тыя часы, калі ежы было мала, залішняя вага шанавалася як паказьнік статуту. Цяпер, калі нас атачае лішак ежы, падцягнутае цела кажа аб тым, што чалавек пасьпяхова супрацьстаіць харчовым спакусам і досыць валявы для рэгулярнай фізычнай актыўнасьці.
 
@@ -241,7 +238,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Мы эвалюцыйна запраграмаваныя ўспрымаць прыгожым усё, што спрыяе выжываньню, таму здароўе заўсёды прывабнае. Мы ўспрымаем прыгажосьць як гармонію целаскладу і асобы, як своеасаблівае зьзяньне абаяньня чалавека, цэласнасьць ягонага вобразу. Нам падабаюцца станоўчыя эмоцыі, якія мы адчуваем побач з прыгожым чалавекам.
 
-У структуры прывабнасьці вылучаюць немадыфікоўныя чыньнікі, якія ня выправіць без апэрацыі (і ня трэба гэтага рабіць!), і мадыфікоўныя, на якія трэба і можна ўплываць. Зыходная вонкавая прывабнасьць – гэта 60% прыгажосьці, а 40% складаюць паводзінныя чыньнікі (маўленьне, пастава, міміка і інш.). Напрыклад, добрая пастава з распраўленымі плячыма і паднятай галавой падкрэсьлівае шыю, візуальна памяншае жывот і павялічвае грудзі. А хада можа ўразіць нават на адлегласьці.
+У структуры прывабнасьці вылучаюць немадыфікоўныя чыньнікі, якія ня выправіць без апэрацыі (і ня трэба гэтага рабіць!), і мадыфікоўныя, на якія трэба і можна ўплываць. Зыходная вонкавая прывабнасьць – гэта 60\,\% прыгажосьці, а 40\,\% складаюць паводзінныя чыньнікі (маўленьне, пастава, міміка і інш.). Напрыклад, добрая пастава з распраўленымі плячыма і паднятай галавой падкрэсьлівае шыю, візуальна памяншае жывот і павялічвае грудзі. А хада можа ўразіць нават на адлегласьці.
 
 Прыкметы прыгажосьці. Апішам некаторыя зь іх. Калі мы глядзім на твар, то заўважаем шырыню зрэнак. Чым шырэй, тым прывабней, – гэта сыгналізуе пра ўвагу і цікаўнасьць. Прывабнымі здаюцца і лімбальныя кольцы, і беласьць цьвердавіцаў. Міміка асобы, расслабленая і ясная, адкрыты позірк заўсёды ўспрымаюцца прывабна, як і маленькае падбародзьдзе, прыўзьнятыя скулы, невялікі памер ніжняй часткі твару, поўныя вусны. Дарэчы, пры стрэсе тлушч мае тэндэнцыю адкладацца па вонкавым контуры твару, візуальна «уцяжарваючы» яго.
 
@@ -255,7 +252,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 У нашым арганізьме ёсьць асаблівая паводзінная імунная сыстэма – гэта набор рэакцый, якія зьмяняюць нашыя паводзіны пры магчымым кантакце; такі мэханізм дапамагае нам пазьбягаць інфэкцый ды іх прыкметаў. Мозг уплывае на імунітэт і наадварот. Людзі, у якіх ёсьць любыя прыкметы хваробы, як вонкавыя, так і ўнутраныя, здаюцца нам непрыемнымі, меней прывабнымі.
 
-Калі дадаць невялікую прыкмету хваробы ці траўмы (плямы, драпіны і да т.п.), то практыка «хуткіх» спатканьняў паказала, што прывабнасьць адразу зьніжаецца на 80%. Зьніжэньне ўзроўню хранічнага запаленьня ня толькі зьніжае ўзровень рызыкі мноства хваробаў і паскоранага старэньня, але й робіць вас больш прывабнымі.
+Калі дадаць невялікую прыкмету хваробы ці траўмы (плямы, драпіны і да т.п.), то практыка «хуткіх» спатканьняў паказала, што прывабнасьць адразу зьніжаецца на 80\,\%. Зьніжэньне ўзроўню хранічнага запаленьня ня толькі зьніжае ўзровень рызыкі мноства хваробаў і паскоранага старэньня, але й робіць вас больш прывабнымі.
 
 Кіраваньне ўвагай. Чым больш чалавек прыцягвае ўвагу, тым больш прыцягальным ён нам здаецца, няважна якім спосабам. Таму больш прывабнымі здаюцца публічныя асобы, музыканты, апавядальнікі і да т.п. Усё, што дзівіць нас і цешыць, кіруе ўвагай. А вось калі партнёр ня можа ўтрымаць нашую ўвагу, нам нудна, то ён здаецца непрыцягальным. Часам здольнасьць слухаць, дабрыня і клапатлівасьць робяць чалавека больш прывабным і цікавым. Як казала Марлен Дытрых: «Мужчыну, хутчэй, можа зацікавіць жанчына, якая выяўляе да яго цікавасьць, чым жанчына з прыгожымі нагамі».
 
@@ -274,7 +271,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 3. Ацаніце свой узровень сымэтрыі. Зрабіце фота твару з розных паловак, памерайце аб'ёмы і даўжыню рук і ног з абодвух бакоў. Ці вялікая розьніца? Вялікая сымэтрыя лічыцца больш прывабнай.
 
 
-8. Невэрбальнае: пастава і позірк
+\section{Невэрбальнае: пастава і позірк}
 
 Я люблю глядзець на прыгожыя будынкі, прыгожых людзей і прыўкрасную прыроду, бо здаровае асяродзьдзе робіць здаравейшымі й нас саміх. Аднак бывае, што вонкава прывабны чалавек можа імгненна абясцэніць свае фізычныя дадзеныя, а ня вельмі прывабны вонкава – адразу стаць неймаверна прыцягальным. Тры ключавыя чыньнікі – гэта маўленьне, невэрбаліка, улучна зь мімікай твару і выражэньнем эмоцыяў, і пастава, улучна з хадой. У адрозьненьне ад выгляду, іх лёгка разьвіваць і трэніраваць. Проста дзіўна, што людзі марнуюць вялізныя грошы на касмэтыку, адзеньне, каштоўнасьці, замест таго каб прыцэльна разьвіць гэтыя навыкі. Невыпадкова ключавымі навыкамі ў арыстакратычным выхаваньні былі навучаньне манэрам, правільнаму выражэньню эмоцыяў і ўменьню захоўваць стрыманасьць, а таксама ўменьне трымаць паставу.
 
@@ -298,7 +295,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Чым радасьнейшы чалавек, тым ён прывабнейшы. Тое, як мы выглядаем і рухаемся, залежыць ад работы ніграстрыярнага шляху. Ніграстрыярны шлях – гэта дафамінавы шлях мозгу, які рэгулюе цяглічны тонус, цягліцы твару, каардынацыю, позы і рухальныя праявы эмоцыяў (сьмех, усьмешкі, радасьць). Пры нізкім узроўні дафаміну ваш твар скаваны, цягліцы напружаныя, рухі нязграбныя, поза згорбленая. Калі вы радасныя, то вочы зьзяюць, цела разьняволенае, твар усьцешаны і адкрыты, пастава ганарлівая. Так радасьць робіць вас прыгажэйшымі.
 
-Чым вы "большыя", тым "важнейшыя". Разьдзімаюцца ў памеры жабы, вайскоўцы апранаюць велізарныя фуражкі і эпалеты, каб здавацца больш значнымі і небясьпечнымі. Умерана разьвітая мускулатура, высокі рост – прыкметы статусу. Сярод амэрыканцаў ростам 170-180 см кожныя 2,5 см павялічваюць заробак на 2%. Шанец атрымаць больш высокую пасаду вышэйшы ў высокіх людзей, таму адзеньне і абцасы, якія візуальна павялічваюць рост, важныя для кар'еры мужчынаў і жанчынаў. Стаць «большымі» можна проста выпрастаўшыся і расправіўшы плечы, ну, ці можна залезьці на бранявік – калі вы маленькага росту. 
+Чым вы "большыя", тым "важнейшыя". Разьдзімаюцца ў памеры жабы, вайскоўцы апранаюць велізарныя фуражкі і эпалеты, каб здавацца больш значнымі і небясьпечнымі. Умерана разьвітая мускулатура, высокі рост – прыкметы статусу. Сярод амэрыканцаў ростам 170-180 см кожныя 2,5 см павялічваюць заробак на 2\,\%. Шанец атрымаць больш высокую пасаду вышэйшы ў высокіх людзей, таму адзеньне і абцасы, якія візуальна павялічваюць рост, важныя для кар'еры мужчынаў і жанчынаў. Стаць «большымі» можна проста выпрастаўшыся і расправіўшы плечы, ну, ці можна залезьці на бранявік – калі вы маленькага росту. 
 
 Позірк і пастава. Чым ніжэйшая ваша галава, тым горшая ваша пастава. У маім анляйн-курсе «Здаровая пастава» мы пачынаем працу менавіта са зьмены позірку, бо куды вы глядзіце, туды й нахілецца галава. А куды нахіляецца галава, туды ідзе і зьмена тонусу цягліц цела. Давайце правядзём экспэрымэнт. Прыслухайцеся да тонусу цягліц: як толькі вы сагняце галаву, аўтаматычна ўзьнікне павелічэньне тонусу цягліц пярэдняга боку цела і жаданьне сагнуць канцавіны. А калі вы падымеце галаву, то павялічыцца тонус цягліц-разгінальнікаў задняй паверхні цела. Паспрабавалі?
 
@@ -321,7 +318,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 3. Уявіце нешта вельмі важнае і прыемнае для вас, напоўніўшы сябе цеплынёй. Паглядзіце зараз гэтымі вачыма на чалавека.
 
 
-9. Павышэньне статусу
+\section{Павышэньне статусу}
 
 Першае і самае важнае, што вы можаце зрабіць для павышэньня статусу, – гэта зразумець, што вы – звычайны чалавек, такі ж, як і ўсе астатнія. Паміж людзьмі агульнага нашмат больш, чым здаецца, агульны і наш лёс – бо мы жывём у адным грамадстве, на адной плянэце, пад адным сонцам і дыхаем адным паветрам. Калі мы гэта разумеем, то можам дазволіць сабе і памыляцца, і дзейнічаць, усьведамляючы, што не сьвятыя гаршкі лепяць. Так, мы звычайныя людзі, але можам стаць лепшымі, можам паглынаць веды, выпраўляць памылкі, расьці і разьвівацца. А як толькі мы ўяўляем сябе экспэртамі-профі, то атрымліваецца, што ўжо й мяняць нічога ня трэба.
 
@@ -412,7 +409,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 3. Як вы можаце палепшыць свой гардэроб і свой стыль?
 
 
-10. Ікігай. Навошта вы гэта робіце?
+\section{Ікігай. Навошта вы гэта робіце?}
 
 Старажытныя грэкі былі людзьмі, апантанымі войнамі, дэмакратыяй, адукацыяй, спортам, навукай і мастацтвам. Але на сьцяне іх галоўнага храма было напісана: «Спазнай самога сябе». Самапазнаньне яны лічылі нават важнейшым, чым здароўе. Жорсткае XX стагодзьдзе давяло справядлівасьць гэтай думкі. Самымі жыцьцеўстойлівымі ў канцэнтрацыйных лягерах былі людзі з высокім пачуцьцём уласнае годнасьці і разьвітой самаідэнтыфікацыяй: арыстакраты, кадравыя ваенныя, палітычныя і рэлігійныя зьняволеныя. Тыя, хто добра разумеў і ведаў, хто яны і дзеля чаго жывуць.
 
