--- a/willpower/intro.tex
+++ b/willpower/intro.tex
@@ -1,5 +1,5 @@
-Уступ
-
+\chapter*{Уступ}
+\addcontentsline{toc}{chapter}{Уступ}
 
 У 2014 годзе, працуючы выкладчыкам у мэдыцынскім унівэрсітэце, я пачаў весьці шэраг адукацыйных курсаў, датычных розных аспэктаў здароўя – ад харчаваньня да стрэсу. Людзі стаміліся ад мноства неправераных і сумнеўных мэтодыкаў аздараўленьня, таму з задавальненьнем прыходзілі вучыцца быць здаровымі з дапамогай навукі. Паступова гэтыя курсы вырасьлі ў маю Школу здароўя, якую прайшлі ўжо тысячы людзей: мы разабралі сотні практыкаў, тысячы прыватных выпадкаў. Назапашаныя за гэтыя гады досьвед і веды я й падаю ў сваёй кнізе. Гэты дапаможнік – плён працы нашай здаровай супольнасьці, які месьціць як навуковыя веды, так і практычныя падыходы да выкарыстаньня ў паўсядзённым жыцьці.
 
