--- a/nutrition.tex
+++ b/nutrition.tex
@@ -32,6 +32,7 @@
 \include{nutrition/intro}
 
 \part{Асноўныя правілы рэжыму харчаваньня}
+\markright{Асноўныя правілы рэжыму харчаваньня}
 
 \include{nutrition/chapter1}
 \include{nutrition/chapter2}
@@ -41,6 +42,7 @@
 \include{nutrition/chapter6}
 
 \part{Удасканаленьне рэжыму}
+\markright{Удасканаленьне рэжыму}
 
 \include{nutrition/chapter7}
 \include{nutrition/chapter8}
@@ -50,6 +52,7 @@
 \include{nutrition/chapter12}
 
 \part{Асноўныя правілы выбару прадуктаў}
+\markright{Асноўныя правілы выбару прадуктаў}
 
 \include{nutrition/chapter13}
 \include{nutrition/chapter14}
@@ -59,6 +62,7 @@
 \include{nutrition/chapter18}
 
 \part{Прадукты}
+\markright{Прадукты}
 
 \include{nutrition/chapter19}
 \include{nutrition/chapter20}
